--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-18 15:35:03
+lastsearch = 2024-07-18 21:17:14
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -19.0%%
-title = Chăn ga gối Sông Hồng dòng Basic mã BC-14
-url = https://changagoidemsonghong.com/chan-ga-goi-bc14
+match = -28.6%%
+title = Bộ chăn ga gối 100%% cotton mã mầu BC22-066
+url = https://changagoidemsonghong.com/chan-ga-goi-bc66
 
 [songhong.info]
 match = -19.0%%
