--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-18 20:20:19
+lastsearch = 2024-07-18 21:18:44
 
 [hk.linkedin.com]
-match = -123.1%%
-title = Chan cocoo - Freelance (Self employed)
-url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
+match = 0.0%%
+title = Coco Chan - Hoi Lai Kok
+url = https://hk.linkedin.com/in/coco-chan-935486254
 
 [www.instagram.com]
-match = -230.8%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -23.1%%
+title = Coco Chan (@cocopops072)
+url = https://www.instagram.com/cocopops072/?hl=en
 
 [www.solunafineart.com]
 match = -22.2%%
@@ -22,9 +22,9 @@ title = Once Upon
 url = https://www.solunafineart.com/once-upon
 
 [en.wikipedia.org]
-match = -25.0%%
-title = Coco Lee
-url = https://en.wikipedia.org/wiki/Coco_Lee
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Coco_Chanel
 
 [www.sassymamahk.com]
 match = -246.2%%
