--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-18 10:44:33
+lastsearch = 2024-07-18 21:15:54
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -62,9 +62,9 @@ title = Top 16 game Idle trên điện thoại Android, iOS hay nhất
 url = https://www.thegioididong.com/game-app/top-16-game-idle-tren-dien-thoai-android-ios-hay-nhat-khong-the-bo-1334353
 
 [vnexpress.net]
-match = -187.5%%
-title = Chủ mưu buôn lậu 6 tấn vàng: 'Không hiểu biết pháp luật'
-url = https://vnexpress.net/chu-muu-buon-lau-6-tan-vang-khong-hieu-biet-phap-luat-4770821.html
+match = -93.8%%
+title = Chứng khoán đảo chiều tăng vào cuối phiên
+url = https://vnexpress.net/chung-khoan-hom-nay-18-7-vn-index-dao-chieu-vao-cuoi-phien-4771668.html
 
 [laodong.vn]
 match = -187.5%%
