--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-18 20:05:36
+lastsearch = 2024-07-18 21:17:03
 
 [shopee.vn]
 match = -171.4%%
@@ -12,9 +12,9 @@ title = [BẢO HÀNH 18 THÁNG] Màn Chụp Tự Bung Đỉnh Rộng ...
 url = https://shopee.vn/-BẢO-HÀNH-18-THÁNG-Màn-Chụp-Tự-Bung-Đỉnh-Rộng-Cao-Cấp-Màn-Đỉnh-Vuông-Hàng-Đẹp-Dày-Dặn-2m2_1m8_1m6-i.176591078.7737140981
 
 [mungthienmetta.com]
-match = -185.7%%
-title = {NEW2021} Mùng Ngủ METTA Tự Bung Thông Minh - 2 ...
-url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/new2021-mung-ngu-metta-tu-bung-thong-minh-2-met-vuong-mngu2m-vuong-xam-bh-18-thang.html
+match = -171.4%%
+title = {NEW2022} 2M Vuông | Mùng Ngủ METTA Tự Bung - ...
+url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/new2022-2m-vuong-mung-ngu-metta-tu-bung-mngu2m-vuong-vang-bh-18-thang.html
 
 [tiki.vn]
 match = -221.4%%
