CI images update

--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-18 16:50:10
+lastsearch = 2024-07-18 21:34:00
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -122,9 +122,9 @@ title = Con lắc đơn chiều dài l = 0,5 (m), m = 100 gam dao động ở ..
 url = https://moon.vn/hoi-dap/con-lac-don-chieu-dai-l-05-m-m-100-gam-dao-dong-o-noi-co-g-98-ms2-voi-bien-do-goc-ba-679117
 
 [m.facebook.com]
-match = -100.0%%
-title = [TEA] Kit sơ bộ của Lingsha Tinh Hồn: 1
-url = https://m.facebook.com/DanHengTeaShop/photos/tea-kit-sơ-bộ-của-lingshatinh-hồn1-hiệu-suất-phá-vỡ-điểm-yếu-của-lingsha-tăng-50/122159573498129690/
+match = -218.8%%
+title = "Quái vật da nâu" Trần Quang Lộc và màn đụng độ đáng nhớ ...
+url = https://m.facebook.com/Onsportchannel/videos/quái-vật-da-nâu-trần-quang-lộc-và-màn-đụng-độ-đáng-nhớ-bậc-nhất-sự-nghiệp-với-lý/301203389669580/
 
 [dangcongsan.vn]
 match = -231.2%%
@@ -405,4 +405,9 @@ url = https://baobinhthuan.com.vn/mo-cua-tham-quan-di-san-hoang-toc-cham-120445.
 match = -137.5%%
 title = Lan tỏa phong trào luyện tập bóng đá ở Bảo Yên
 url = https://baolaocai.vn/lan-toa-phong-trao-luyen-tap-bong-da-o-bao-yen-post387098.html
+
+[ytehagiang.org.vn]
+match = 12.5%%
+title = Sở Y Tế Hà Giang
+url = https://ytehagiang.org.vn/
 
