--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-07-18 19:24:40
+lastsearch = 2024-07-18 21:30:34
 
 [shopee.vn]
-match = -14.8%%
-title = chăn lông 3kg giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn lông 3kg  
+match = 7.4%%
+title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
+url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -52,14 +52,14 @@ title = Chăn Thái Lan Toto TT300
 url = https://phugiatrading.com/chan-thai-lan-toto-tt301/
 
 [www.youtube.com]
-match = -33.3%%
-title = NHÌN CẢNH NÀY MUỐN Ở LẠI MỸ THIỆT RỒI - XỨ THIÊN ...
-url = https://www.youtube.com/watch?v=eY65K5Q3JaM
+match = -63.0%%
+title = Công bố thủ đoạn đầu độc 6 người Việt và gốc Việt tại Thái ...
+url = https://www.youtube.com/watch?v=jP8fe_ad4Tw
 
 [lasantevn.com]
 match = -11.1%%
-title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC NÂU(DOUBLE) - Lasante
-url = https://lasantevn.com/chan-long-gau-bac-cuc-nau-2-mat-lasante-phap/
+title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC XÁM (SINGLE) - Lasante
+url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 
 [www.nguoi-viet.com]
 match = -59.3%%
@@ -170,4 +170,9 @@ url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
 match = -55.6%%
 title = Chăn/mền lông tuyết trắng in thỏ gấu xuất Hàn loại đẹp size ...
 url = https://dogiasi.net/san-pham/chan-men-long-tuyet-trang-in-tho-gau-xuat-han-loai-dep-size-90x120cm/
+
+[bebubam.vn]
+match = 43.5%%
+title = Chăn tuyết cho bé 2 lớp
+url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop
 
