--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-18 20:24:53
+lastsearch = 2024-07-18 21:33:38
 
 [chieutruc.info]
-match = -63.6%%
-title = Bảng giá chiếu Thái Lan dòng gấp vân gỗ cao cấp
-url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
+match = -100.0%%
+title = Bảng giá chiếu cói Xuân Hòa xuất khẩu - hàng Việt Nam cao ...
+url = https://chieutruc.info/chieu-coi-xuan-hoa/
 
 [tiki.vn]
 match = -36.4%%
@@ -220,4 +220,14 @@ url = https://vieon.vn/chu-thuat-hoi-chien.html
 match = -109.1%%
 title = Màn cởi áo, khoe body 6 múi của thí sinh Nam vương Thế ...
 url = https://znews.vn/man-coi-ao-khoe-body-6-mui-cua-thi-sinh-nam-vuong-the-gioi-viet-nam-post1486155.html
+
+[hcmc.vietnam.embassy.gov.au]
+match = -59.1%%
+title = Thị thực và Di trú - Ho Chi Minh City, Vietnam
+url = https://hcmc.vietnam.embassy.gov.au/hchivietnamese/thi-thuc-va-di-tru.html
+
+[www.hcmcpv.org.vn]
+match = -140.9%%
+title = Hỗ trợ vay vốn với lãi suất ưu đãi cho các cá nhân, tổ chức ...
+url = https://www.hcmcpv.org.vn/tin-tuc/ho-tro-vay-von-voi-lai-suat-uu-dai-cho-cac-ca-nhan-to-chuc-doanh-nghiep-hoat-dong-thu-gom-van-chu-1491925124
 
