--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-07-18 13:24:49
+lastsearch = 2024-07-18 21:32:10
 
 [demxanh.com]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
 url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [foreverbedding.net]
-match = -59.3%%
-title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
+match = 0.0%%
+title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [congtynemthangloi.com]
 match = -29.6%%
