--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-07-18 18:16:57
+lastsearch = 2024-07-18 21:32:32
 
 [www.tui.co.uk]
-match = -153.3%%
-title = Where We Fly | Flights with TUI 2024 / ...
-url = https://www.tui.co.uk/flight/where-we-fly
+match = 6.7%%
+title = Flight Timetable
+url = https://www.tui.co.uk/flight/timetable
 
 [cruisepanda.com]
 match = -213.3%%
