CI images update

--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-18 15:34:01
+lastsearch = 2024-07-18 21:50:19
 
 [helloviettravel.com]
 match = -50.0%%
@@ -73,8 +73,8 @@ url = https://mia.vn/cam-nang-du-lich/top-dia-diem-du-lich-daklak-noi-tieng-khon
 
 [www.ivivu.com]
 match = -100.0%%
-title = Những chiêu 'rút ví' nhẹ nhàng khách du lịch
-url = https://www.ivivu.com/blog/2015/10/nhung-chieu-rut-vi-nhe-nhang-khach-du-lich/
+title = Du lịch New York đừng quên 18 địa danh này
+url = https://www.ivivu.com/blog/2017/09/du-lich-new-york-dung-quen-18-dia-danh-nay/
 
 [www.dulichxanh.com.vn]
 match = -143.8%%
@@ -265,4 +265,9 @@ url = https://viettourist.com/tours/du-lich-nhat-ban-he-danh-cho-gia-dinh-4n3d-p
 match = -31.2%%
 title = Bản tin Văn hóa du lịch ngày 18/7
 url = https://baothuathienhue.vn/video/ban-tin/ban-tin-van-hoa-du-lich-ngay-18-7-1874652.html
+
+[books.google.com]
+match = -231.2%%
+title = Phương trình bậc nhất một ẩn: Phương pháp giải toán từ cơ ...
+url = https://books.google.com/books?id=Nls8DwAAQBAJ&pg=PA105&lpg=PA105&dq=chieu+du+lich+18&source=bl&ots=WeD1UcSORe&sig=ACfU3U35AuxnBouA6geXnjwGqu4yf_VCZQ&hl=en&sa=X&ved=2ahUKEwiZ1PSU67CHAxUpNzQIHX7bDK8Q6AF6BAgXEAM
 
