--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-18 20:50:28
+lastsearch = 2024-07-18 21:53:05
 
 [burningman.org]
 match = 0.0%%
@@ -750,4 +750,9 @@ url = https://www.pjm.com/
 match = -233.3%%
 title = LowTCenter: Men's Health Clinic for Testosterone Replacement
 url = https://lowtcenter.com/
+
+[abc7ny.com]
+match = -193.3%%
+title = ABC7 New York - NY News, Local News, Breaking News ...
+url = https://abc7ny.com/
 
