--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-18 21:31:19
+lastsearch = 2024-07-18 21:44:24
 
 [batdongsan.com.vn]
 match = -233.3%%
@@ -305,4 +305,9 @@ url = https://www.asc-aqua.org/wp-content/uploads/2022/09/2022_09-CoC-holders-wi
 match = -133.3%%
 title = Quận 2- khu dân cư D2 Eight ( Capital land)
 url = https://diaoc24gio.com/du-an/quan-2-khu-dan-cu-d2-eight-capital-land
+
+[concung.com]
+match = -213.3%%
+title = Xe scooter 3 bánh ELSA DCA82009-Q | Xe lắc, xe chòi chân
+url = https://concung.com/xe-lac-xe-choi-chan/xe-scooter-3-banh-elsa-dca82009-q-46640.html
 
