--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-07-18 20:31:54
+lastsearch = 2024-07-18 21:49:34
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -12,9 +12,9 @@ title = ĐỆM LÒ XO EVERON, KING KOIL
 url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [demxanh.com]
-match = 29.8%%
-title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
-url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
+match = 27.9%%
+title = Đệm lò xo 1m6x2m (160x200cm) giá bao nhiêu?
+url = https://demxanh.com/dem-lo-xo-1m6x2m-160x200cm-gia-bao-nhieu.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -72,7 +72,7 @@ title = kingkoil spray cushion (america) - Korean Pillows & Blankets
 url = https://everonvietnam.com/en/dem-lo-xo-kingkoil-my/
 
 [everonhanquoc.vn]
-match = 33.3%%
-title = Đệm Lò Xo King Koil Công Nghệ Hàng Đầu Tại Mỹ
-url = https://everonhanquoc.vn/1035/dem-lo-xo-king-koil
+match = -48.0%%
+title = Các Loại Đệm Lò Xo Everon
+url = https://everonhanquoc.vn/1030/dem-lo-xo-everon
 
