--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-07-18 21:46:12
+lastsearch = 2024-07-18 22:19:55
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -28,8 +28,8 @@ url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
 
 [changagoidemsonghong.com]
 match = -23.8%%
-title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
-url = https://changagoidemsonghong.com/chan-ga-goi-bc61
+title = Bộ chăn ga gối 100%% cotton mã mầu BC22-066
+url = https://changagoidemsonghong.com/chan-ga-goi-bc66
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối everon ES1816
 url = https://everon365.vn/bo-chan-ga-goi-everon-es-1816.html
 
 [shopee.vn]
-match = -47.6%%
-title = ga gối cotton xoa nhung đám cưới hồng mvdv16
-url = https://shopee.vn/search?keyword=ga gối cotton xoa nhung đám cưới hồng mvdv16
+match = -85.7%%
+title = Bộ ga gối chần bông cao cấp ETAMI cotton Hàn Quốc 100 ...
+url = https://shopee.vn/Bộ-ga-gối-chần-bông-cao-cấp-ETAMI-cotton-Hàn-Quốc-100-Hoa-Nhí-Xanh-Ngọc-gồm-1-ga-chần-chun-2-vỏ-gối-đầu-i.530345658.23830480845
 
 [runa.vn]
 match = -4.8%%
