--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-18 20:47:28
+lastsearch = 2024-07-18 22:14:59
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -46.4%%
-title = Những câu hỏi thường gặp tại Khoa Khám bệnh chuyên khoa ...
-url = https://www.impehcm.org.vn/noi-dung/tin-hoat-dong/nhung-cau-hoi-thuong-gap-tai-khoa-kham-benh-chuyen-khoa-ky-sinh-trung.html
+match = -71.4%%
+title = Giun đầu gai (Phần 1: Đại cương; Dịch tễ học; Đặc điểm hình ...
+url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/giun-dau-gai-phan-1-dai-cuong-dich-te-hoc-dac-diem-hinh-thai-hoc-va-chu-ky-phat-trien.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
@@ -99,7 +99,7 @@ url = https://medlatec.vn/tu-dien-benh-ly/san-day-sbfou
 [www.merckmillipore.com]
 match = 27.3%%
 title = PHIẾU AN TOÀN HÓA CHẤT
-url = https://www.merckmillipore.com/Web-JP-Site/ja_JP/-/JPY/ShowDocument-File?ProductSKU=MDA_CHEM-808803&DocumentType=MSD&DocumentId=808803_SDS_VN_VI.PDF&DocumentUID=43004958&Language=VI&Country=VN&Origin=PDP
+url = https://www.merckmillipore.com/Web-ES-Site/es_ES/-/EUR/ShowDocument-File?ProductSKU=MDA_CHEM-104354&DocumentType=MSD&DocumentId=104354_SDS_VN_VI.PDF&DocumentUID=47184070&Language=VI&Country=VN&Origin=PDP
 
 [www.facebook.com]
 match = 28.6%%
