--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-18 21:50:08
+lastsearch = 2024-07-18 22:21:01
 
 [demxanh.com]
-match = 40.7%%
-title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
+match = 25.9%%
+title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
 
 [shopee.vn]
 match = -33.3%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [russo.vn]
-match = 29.6%%
-title = Chiếu điều hòa cao su non 1m8x2m - Russo
-url = https://russo.vn/chieu-dieu-hoa-cao-su-1m8x2m/
+match = -37.0%%
+title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
+url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 
 [www.dienmayxanh.com]
 match = -48.1%%
