--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-18 17:47:22
+lastsearch = 2024-07-18 22:21:35
 
 [scholar.google.com]
 match = -43.8%%
@@ -92,8 +92,8 @@ title = maps/@21.001139,105.847882,17z?hl=vi
 url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 
 [www.facebook.com]
-match = -87.5%%
-title = Tất cả 8 thành viên Stray Kids (bao ...
+match = -106.2%%
+title = Tất cả 8 thành viên Stray Kids (bao gồm ...
 url = https://www.facebook.com/lacsaubich/photos/tất-cả-8-thành-viên-stray-kids-tái-ký-hợp-đồng-với-jypchiều-ngày-187-jyp-vui-mừn/807363144852806/
 
 [www.cgv.vn]
@@ -119,7 +119,7 @@ url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 [books.google.com]
 match = -218.8%%
 title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+18&source=bl&ots=aHabAVblw9&sig=ACfU3U3oHfBAvCzgh7sBZJSoTjNwHC3mtQ&hl=en&sa=X&ved=2ahUKEwjL-4vutLCHAxW-LTQIHfHRATcQ6AF6BAggEAM
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+18&source=bl&ots=aHabBN8fBc&sig=ACfU3U1CcxukrtRHbFsQUbonP1h3VA_MsQ&hl=en&sa=X&ved=2ahUKEwjB_biT8rCHAxXWAHkGHWdnCOkQ6AF6BAghEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
@@ -480,4 +480,9 @@ url = https://baoquangnam.vn/ky-niem-50-nam-chien-thang-nong-son-trung-phuoc-18-
 match = -118.8%%
 title = Thị trường rung lắc, đảo chiều phút cuối phiên
 url = https://m.nhipcaudautu.vn/tai-chinh/thi-truong-rung-lac-dao-chieu-phut-cuoi-phien-3359333/
+
+[tygiausd.org]
+match = -100.0%%
+title = Chóng mặt với pha cua gắt của chứng khoán
+url = https://tygiausd.org/ChiTiet/25918-chong-mat-voi-pha-cua-gat-cua-chung-khoan-20240718165135709
 
