--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-18 20:53:11
+lastsearch = 2024-07-18 22:19:21
 
 [bedding.vn]
 match = -123.1%%
@@ -12,9 +12,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [changagoidemsonghong.com]
-match = -46.2%%
-title = Chăn ga gối Home mã H16-038
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h16-038
+match = -184.6%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [songhonghanoi.vn]
 match = -176.9%%
@@ -77,8 +77,8 @@ title = George A Calin, MD, Ph.D.
 url = https://faculty.mdanderson.org/profiles/george_calin.html
 
 [ischool.uw.edu]
-match = -246.2%%
-title = Anind K. Dey - UW iSchool - University of Washington
+match = 8.3%%
+title = Anind K. Dey
 url = http://ischool.uw.edu/people/faculty/profile/anind
 
 [www.uswomensopen.com]
