--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-18 21:44:36
+lastsearch = 2024-07-18 22:14:27
 
 [phana.com.vn]
-match = 63.6%%
-title = Giường bệnh
-url = https://phana.com.vn/giuong-benh
+match = -90.9%%
+title = MN-G1-Giường 1 tay quay có bô
+url = https://phana.com.vn/mn-g1-giuong-1-tay-quay-co-bo
 
 [tiki.vn]
 match = -190.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -290.9%%
-title = Khung giường bằng kim loại gần Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/metal-bed-frames/?locale=vi_VN
+match = -281.8%%
+title = Có bán Đệm giường đôi lớn tại Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/queen-mattresses/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
