--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-18 20:39:02
+lastsearch = 2024-07-18 22:17:54
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,14 +12,14 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -122.2%%
-title = Nem Nướng, Nem Chua Thanh Hóa - giá siêu mềm chỉ 30k
-url = https://www.facebook.com/groups/7408819529141100/posts/-nem-nướng-nem-chua-thanh-hóa-giá-siêu-mềm-chỉ-30k-đừng-để-vị-giác-của-bạn-phải-/8212919362064442/
+match = -61.1%%
+title = NEM Fashion - ÁO KHOÁC LÔNG VŨ SIÊU NHẸ
+url = https://www.facebook.com/nemfashion.official/posts/áo-khoác-lông-vũsiêu-nhẹ-siêu-ấm-chỉ-từ-𝟏𝟏𝟗𝟗𝐊-với-xu-thế-phát-triển-của-thời-tra/1942429895894902/
 
 [thegioinem.com]
-match = 23.5%%
-title = Bảng Giá Nệm 2024
-url = https://thegioinem.com/bang-gia-nem
+match = -155.6%%
+title = Nệm cao su nhân tạo và nệm cao su tổng hợp khác nhau ở ...
+url = https://thegioinem.com/nem-cao-su-nhan-tao-va-cao-su-tong-hop-khac-nhau-o-diem-nao.html
 
 [garan.vn]
 match = -166.7%%
