CI images update

--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-18 21:44:24
+lastsearch = 2024-07-18 22:38:31
 
 [batdongsan.com.vn]
 match = -233.3%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = 0.0%%
-title = PHOTOTIMEVietnam
-url = https://www.facebook.com/phototimevn/
+match = -133.3%%
+title = Sân nhà cung các hoạt động khác diễn ra tại
+url = https://www.facebook.com/photo.php?fbid=742934241290442&id=100067216177900&set=a.505581898359012
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -310,4 +310,9 @@ url = https://diaoc24gio.com/du-an/quan-2-khu-dan-cu-d2-eight-capital-land
 match = -213.3%%
 title = Xe scooter 3 bánh ELSA DCA82009-Q | Xe lắc, xe chòi chân
 url = https://concung.com/xe-lac-xe-choi-chan/xe-scooter-3-banh-elsa-dca82009-q-46640.html
+
+[tuyensinh247.com]
+match = -220.0%%
+title = Một con lắc đơn có chiều dài dây treo 1m dao động điều ...
+url = https://tuyensinh247.com/bai-tap-355803.html
 
