--- a/images/ga-phu-es1807-180x200/config.ini
+++ b/images/ga-phu-es1807-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1807-180x200.html
 lastopen = 2024-06-07 01:02:20
 
 [search]
-lastsearch = 2024-07-18 21:49:23
+lastsearch = 2024-07-18 22:32:10
 
 [everonvn.com.vn]
 match = 4.8%%
@@ -23,8 +23,8 @@ url = https://www.diepxuan.com/ga-phu-es1807-180x200.html
 
 [m.facebook.com]
 match = -147.6%%
-title = Bedo's Leatherworks, LLC - Cigar Indys. WOW. Beautiful...
-url = https://m.facebook.com/bedosleatherworks/posts/2276654379137279/
+title = Glass Collecting | Getting ready for July 4 - Goofus style
+url = https://m.facebook.com/groups/140003702829145/posts/2744407399055416/
 
 [www.dootalk.com]
 match = -119.0%%
@@ -37,9 +37,9 @@ title = Best Seedbank to order from in US? | Page 9
 url = https://www.rollitup.org/t/best-seedbank-to-order-from-in-us.908367/page-9
 
 [www.reddit.com]
-match = -119.0%%
-title = Sunday Swaps: Destash Listings : r/Indiemakeupandmore
-url = https://www.reddit.com/r/Indiemakeupandmore/comments/t7y96v/sunday_swaps_destash_listings/
+match = -76.2%%
+title = Buy/Sell/Trade 09/21/22 : r/goodyearwelt
+url = https://www.reddit.com/r/goodyearwelt/comments/xk5qgk/buyselltrade_092122/
 
 [lovepotion.invisionzone.com]
 match = -152.4%%
