--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-18 20:04:25
+lastsearch = 2024-07-18 22:32:21
 
 [www.bible.com]
 match = -88.2%%
@@ -12,14 +12,14 @@ title = LUKA 22 | MIZCLBSI Bible | YouVersion
 url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
-match = -123.5%%
-title = Thufingte 1-31 - Mizo BIBle - WordPress.com
-url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
+match = -111.8%%
+title = Exodus 1-40 - Mizo BIBle - WordPress.com
+url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
 
 [www.biblegateway.com]
-match = -58.8%%
-title = Matthew 20:22-23 King James Version
-url = https://www.biblegateway.com/passage/?search=Matthew 20:22-23&version=KJV
+match = -129.4%%
+title = Matthew 20:22 NIV - “You don't know what you are
+url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NIV
 
 [mungchup.com]
 match = -100.0%%
@@ -33,8 +33,8 @@ url = https://munghoangphat.com/
 
 [www.churchofjesuschrist.org]
 match = -205.9%%
-title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
+title = 2 Nifai 12 - The Church of Jesus Christ of Latter-day Saints
+url = https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/12?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
