--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-18 17:47:33
+lastsearch = 2024-07-18 22:31:39
 
 [changagoidemtamhao.com]
-match = -5.0%%
-title = Bộ Chăn Ga Gối PYEODA LTT
-url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-ltt
+match = -10.0%%
+title = Đệm PYEODA
+url = https://changagoidemtamhao.com/dem-pyeoda
 
 [demsingapore.com]
-match = -70.0%%
-title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
-url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
+match = -80.0%%
+title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 24
+url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-24.html
 
 [demxanh.com]
-match = -100.0%%
-title = Ga gối chun chần Tencel Pyeoda Hàn Quốc đa sắc 3 món 16
-url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html
+match = -85.0%%
+title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 05
+url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-05.html
 
 [www.facebook.com]
 match = -45.0%%
@@ -27,9 +27,9 @@ title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ
 url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-công-ty-tnhhtm-ngọc-dũng-là-công-ty-sản-xuất-chăn-ga-gối-/873479032786443/
 
 [shopee.vn]
-match = -65.0%%
-title = bộ chăn ga gối lụa chần bông pyeoda(5 món)
-url = https://shopee.vn/bộ-chăn-ga-gối-lụa-chần-bông-pyeoda(5-món)-i.69505820.19625863021
+match = -70.0%%
+title = bộ chăn ga pyeoda gấm sần giá tốt Tháng 7, 2024
+url = https://shopee.vn/search?keyword=bộ chăn ga pyeoda gấm sần&urlold=bo-chan-ga-goi-gam-vip-pyeoda/741954123374297332/3385656584626545253/ 
 
 [tchome.vn]
 match = -10.0%%
