--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-18 21:52:55
+lastsearch = 2024-07-18 22:33:44
 
 [xoptraisan.info]
 match = -147.1%%
@@ -32,14 +32,14 @@ title = Thảm nỉ ghép trản sàn nhà Tường Lâm cao cấp - Lombomshop!
 url = https://lombom.com/tham-ni-ghep-san-nha/
 
 [trieuchau.com]
-match = -64.7%%
-title = 40*40*15 tấm - Thảm xốp mặt nỉ Âu Lạc
-url = https://trieuchau.com/vi-vn/1057/28070/Tham-Xop-40x40cm/404015-tam--Tham-xop-mat-ni-Au-Lac
+match = -129.4%%
+title = Thảm Trải Lót Sàn, Sàn Nhựa Giả Gỗ, Thảm Nhựa TPHCM
+url = https://trieuchau.com/
 
 [www.facebook.com]
-match = 0.0%%
-title = THẢM XỐP TRẢI SÀN | Hanoi
-url = https://www.facebook.com/xoplotsan/
+match = -23.5%%
+title = Thảm Xốp Ghép Trải Sàn | Hanoi
+url = https://www.facebook.com/xoptraisan/
 
 [thamsami.com]
 match = -76.5%%
