CI images update

--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-18 22:20:17
+lastsearch = 2024-07-18 23:17:16
 
 [shopee.vn]
-match = -137.5%%
-title = Chăn cừu mai rùa siêu ấm kích thước 2mx2m3 nặng 2kg
-url = https://shopee.vn/Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng-2kg-i.18553977.19585650220
+match = -162.5%%
+title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ...
+url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
 
 [www.instagram.com]
-match = -156.2%%
-title = Rua-chan (@rua_kouhai) • Instagram photos and videos
-url = https://www.instagram.com/rua_kouhai/?hl=en
+match = -162.5%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [vi.wikipedia.org]
 match = -75.0%%
@@ -27,9 +27,9 @@ title = Lư hương đá chân đặt mai rùa
 url = https://tuongdamynghe.com/trang-tri/lu-huong/lu-huong-da-chan-dat-mai-rua/
 
 [www.vinmec.com]
-match = -18.8%%
-title = Tác dụng của vị thuốc từ rùa
-url = https://www.vinmec.com/vi/y-hoc-co-truyen/duoc-lieu/tac-dung-cua-vi-thuoc-tu-rua/
+match = -37.5%%
+title = Tác dụng của mai rùa với sức khỏe
+url = https://www.vinmec.com/vi/y-hoc-co-truyen/suc-khoe-thuong-thuc/tac-dung-cua-mai-rua-voi-suc-khoe/
 
 [www.youtube.com]
 match = -131.2%%
@@ -72,9 +72,9 @@ title = Hoi Mei Chan - Construction Industry Council
 url = https://hk.linkedin.com/in/hoi-mei-chan-87992911b
 
 [vnexpress.net]
-match = -137.5%%
-title = Xe tăng mai rùa Nga xâm nhập phòng tuyến Ukraine
-url = https://vnexpress.net/xe-tang-mai-rua-nga-xam-nhap-phong-tuyen-ukraine-4736187.html
+match = -143.8%%
+title = Món thạch làm từ mai rùa gây tranh cãi ở Hong Kong
+url = https://vnexpress.net/mon-thach-lam-tu-mai-rua-gay-tranh-cai-o-hong-kong-3338049.html
 
 [www.tiktok.com]
 match = -212.5%%
