--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-18 21:13:13
+lastsearch = 2024-07-18 23:15:40
 
 [demxanh.com]
 match = 38.2%%
@@ -110,4 +110,9 @@ url = https://ru9.vn/blogs/magazine/chieu-dieu-hoa-cao-su-non-co-tot-khong
 match = 11.8%%
 title = Chiếu điều hòa cao su non loại tốt - Mẫu 4 - Nệm Uy Tín
 url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
+
+[khonemtonghop.com]
+match = 58.8%%
+title = Chiếu điều Hòa Cao Su Non Là Gì ...
+url = https://khonemtonghop.com/chieu-dieu-hoa-cao-su-non-la-gi/
 
