--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-18 20:39:47
+lastsearch = 2024-07-18 23:23:29
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -200,4 +200,9 @@ url = https://congan.com.vn/quoc-te/thoi-su-quoc-te/chay-trung-tam-thuong-mai-o-
 match = 43.5%%
 title = Chăn tuyết cho bé 2 lớp
 url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop
+
+[cafef.vn]
+match = -18.5%%
+title = Huýt sáo vào ban đêm cũng là điều "cấm kỵ"
+url = https://cafef.vn/nhung-dieu-du-khach-tuyet-doi-khong-nen-lam-khi-toi-thai-lan-huyt-sao-vao-ban-dem-cung-la-dieu-cam-ky-18824071819333533.chn
 
