--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-18 17:46:49
+lastsearch = 2024-07-18 23:20:38
 
 [www.instagram.com]
-match = -46.2%%
-title = Ke Huy Quan (@kehuyquan)
-url = https://www.instagram.com/kehuyquan/?hl=en
+match = -169.2%%
+title = Embarking on a new journey, @Dior is set ...
+url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -17,8 +17,8 @@ title = Hoi Yee Ng - Christian Dior Couture
 url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
-match = -184.6%%
-title = Kimbee Chan Furthers Creative Pursuit With ...
+match = -238.5%%
+title = Kimbee Chan Furthers Creative Pursuit With Crochet ...
 url = https://wwd.com/fashion-news/fashion-scoops/kimbee-chan-knitwear-workshop-happy-yarn-1235938455/
 
 [vote.umich.edu]
@@ -47,9 +47,9 @@ title = Chan Hoi-wan, chief executive officer of Chinese Estates ...
 url = https://www.gettyimages.com/detail/news-photo/chan-hoi-wan-chief-executive-officer-of-chinese-estates-news-photo/1231895917
 
 [www.facebook.com]
-match = -12.5%%
-title = on.dior.
-url = https://www.facebook.com/photo.php?fbid=732813649031296&id=100069080025160&set=a.630661672579828
+match = -69.2%%
+title = K11 Musea's post - Facebook
+url = https://www.facebook.com/K11MUSEA/posts/️ready-to-hit-the-beach-with-dior-at-hong-kongs-first-ever-dioriviera-pop-up-sur/1604696716398853/
 
 [www.vntg.com]
 match = -130.8%%
@@ -57,8 +57,8 @@ title = Kwok Hoi Chan - 12 vintage design items
 url = https://www.vntg.com/designer/kwok-hoi-chan/
 
 [news.artnet.com]
-match = -338.5%%
-title = Fugitive Billionaire Joseph Lau Will Auction Off Millions of ...
+match = -246.2%%
+title = Fugitive Billionaire Joseph Lau Will Auction Off ...
 url = https://news.artnet.com/market/billionaire-joseph-lau-auctions-2093755
 
 [www.beautypackaging.com]
