CI images update

--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-18 23:17:16
+lastsearch = 2024-07-18 23:39:10
 
 [shopee.vn]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ..
 url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
 
 [www.instagram.com]
-match = -162.5%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -156.2%%
+title = Rua-chan (@rua_kouhai) • Instagram photos and videos
+url = https://www.instagram.com/rua_kouhai/?hl=en
 
 [vi.wikipedia.org]
 match = -75.0%%
@@ -215,4 +215,24 @@ url = https://www.diepxuan.com/chan-cuu-mai-rua.html
 match = -37.5%%
 title = Thailand City List Index page
 url = https://www.makemytrip.com/hotels-international/en-ae/thailand-city-list.html
+
+[evols.library.manoa.hawaii.edu]
+match = -18.8%%
+title = honolulu, foajdjsto, t
+url = https://evols.library.manoa.hawaii.edu/bitstream/10524/6341/1/1894120801.pdf
+
+[en.wikipedia.org]
+match = 41.7%%
+title = Chan Hoi-yan
+url = https://en.wikipedia.org/wiki/Chan_Hoi-yan
+
+[zingnews.vn]
+match = -168.8%%
+title = chi minh toi - Tin tức tức online 24h về chỉ mình tôi
+url = https://zingnews.vn/chỉ-mình-tôi-tin-tuc/trang10.html?type=2
+
+[www.facebook.com]
+match = -193.8%%
+title = Chuẩn bị ra hàng mời sỉ lên đơn, tinh chất vàng 24k KOELCIA
+url = https://www.facebook.com/Minji1087/videos/chuẩn-bị-ra-hàng-mời-sỉ-lên-đơn-tinh-chất-vàng-24k-koelcia/589528275144709/
 
