--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-18 23:20:49
+lastsearch = 2024-07-18 23:38:05
 
 [hoa18.com]
 match = -84.2%%
@@ -12,9 +12,9 @@ title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
 url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -105.3%%
-title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
-url = https://www.youtube.com/watch?v=demL5DzJK5M
+match = -163.2%%
+title = Mộc Hương ta hoa vàng còn đáng chơi khi giá trị nó không ...
+url = https://www.youtube.com/watch?v=kOeDP1xRFpk
 
 [kallos.co]
 match = -105.3%%
@@ -122,9 +122,9 @@ title = Đặc điểm,ý nghĩa và cách trồng cây lát hoa - 18/07/2024
 url = https://caycanhmoc.vn/dac-diemy-nghia-va-cach-trong-cay-lat-hoa/
 
 [hanoimoi.vn]
-match = -105.3%%
-title = Cần chú trọng các biện pháp phòng cháy hơn chữa cháy
-url = https://hanoimoi.vn/can-chu-trong-cac-bien-phap-phong-chay-hon-chua-chay-669708.html
+match = -168.4%%
+title = Vượt qua Nha Trang Dolphins, Hanoi Buffaloes tạm lên thứ ...
+url = https://hanoimoi.vn/vuot-qua-nha-trang-dolphins-hanoi-buffaloes-tam-len-thu-ba-o-vba-2024-672462.html
 
 [www.bachhoaxanh.com]
 match = 0.0%%
