--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-18 22:34:40
+lastsearch = 2024-07-18 23:40:34
 
 [vinatools.com]
 match = -140.0%%
@@ -22,9 +22,9 @@ title = Hướng dẫn đi lại tại sân bay Nội Bài
 url = https://noibaiairport.vn/Transportation-to-and-from-Noibai-International-Airport-nid260.html
 
 [batdongsan.com.vn]
-match = -160.0%%
-title = Mua bán nhà mặt tiền tại đường D2, Quận Bình Tân
-url = https://batdongsan.com.vn/ban-nha-mat-pho-duong-d2-65
+match = -226.7%%
+title = ban nha duong pham van chieu phuong 16 go vap - Bán - tags
+url = https://batdongsan.com.vn/tags/ban/ban-nha-duong-pham-van-chieu-phuong-16-go-vap?price=7&areas=7
 
 [m.facebook.com]
 match = -193.3%%
