--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-18 22:21:24
+lastsearch = 2024-07-18 23:42:09
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -193.8%%
-title = Một cây Mai Chiếu Thủy đã được chơi 10 năm, vẫn giữ giá ...
-url = https://www.youtube.com/watch?v=nv0EjrLAqh0
+match = -200.0%%
+title = Vietnamese Baguette Recipe - BÁNH MÌ VIỆT NAM - KNEAD ...
+url = https://www.youtube.com/watch?v=yzQ6rCK8pJw
 
 [hawater.com.vn]
 match = -75.0%%
@@ -352,9 +352,9 @@ title = Bàn đạp phanh ô tô rung lắc phải làm sao?
 url = http://baoyenbai.com.vn/227/325068/Ban-dap-phanh-o-to-rung-lac-phai-lam-sao.aspx
 
 [atgt.baogiaothong.vn]
-match = -212.5%%
-title = Cảnh sát giao thông đưa người phụ nữ tâm thần lạc lên cao ...
-url = https://atgt.baogiaothong.vn/canh-sat-giao-thong-dua-nguoi-phu-nu-tam-than-lac-len-cao-toc-ve-noi-an-toan-192240717193310273.htm
+match = -218.8%%
+title = Cấm xe qua cầu Trà Khúc 2: Tài xế lạc đường, giao thông ùn tắc
+url = https://atgt.baogiaothong.vn/cam-xe-qua-cau-tra-khuc-2-tai-xe-lac-duong-giao-thong-un-tac-192240718182310498.htm
 
 [cafebiz.vn]
 match = -218.8%%
