--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-18 17:19:42
+lastsearch = 2024-07-18 23:37:09
 
 [www.diepxuan.com]
-match = 39.3%%
-title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html
+match = 42.9%%
+title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [shopee.vn]
 match = -25.0%%
