--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-18 10:36:40
+lastsearch = 2024-07-18 23:34:32
 
 [screenrant.com]
 match = 0.0%%
@@ -12,14 +12,14 @@ title =
 url = https://screenrant.com/use-green-screen-feature-youtube-shorts-how/
 
 [www.facebook.com]
-match = -235.7%%
-title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ...
+match = -178.6%%
+title = BỊ THU HỒI THẺ XANH KHI NHẬP CẢNH TRỞ LẠI MỸ và
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -200.0%%
-title = FIX: VIDEO DXGKRNL FATAL ERROR in Windows 10/11 ...
-url = https://www.youtube.com/watch?v=7yEnuxJqQKg
+match = -78.6%%
+title = Green Screen with other Shorts! 🟩🤳
+url = https://www.youtube.com/watch?v=Q8IeXTDZ734
 
 [www.reddit.com]
 match = -64.3%%
@@ -32,8 +32,8 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -7.1%%
-title = Explore my Options
+match = -50.0%%
+title = Explore my Options | USCIS
 url = https://www.uscis.gov/forms/explore-my-options
 
 [www.evergreenrecreation.com]
