--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-18 18:33:18
+lastsearch = 2024-07-18 23:40:25
 
 [www.reddit.com]
 match = -82.6%%
@@ -332,9 +332,9 @@ title = July-August 2024 (Volume 76, Number 3)
 url = https://monthlyreview.org/2024/07/01/mr-076-03-2024-07_0/
 
 [synapse.koreamed.org]
-match = -2100.0%%
-title = 2
-url = https://synapse.koreamed.org/articles/1096353
+match = -25.0%%
+title = Original Article
+url = https://synapse.koreamed.org/articles/1119644
 
 [www.svcleanenergy.org]
 match = 0.0%%
