--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-07-18 22:35:48
+lastsearch = 2024-07-18 23:41:57
 
 [www.diepxuan.com]
-match = 26.3%%
-title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html
+match = -40.0%%
+title = Túi Tuấn Anh 180x200 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 
 [demkhangduy.com]
 match = -25.0%%
@@ -23,8 +23,8 @@ url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html
 
 [tuananh.vn]
 match = 10.0%%
-title = LÒ XO TÚI RUBY POTENCY
-url = https://tuananh.vn/site/Product/446?name=lo-xo-tui-ruby-potency
+title = LÒ XO TÚI RUBY MERRY
+url = https://tuananh.vn/lo-xo-tui-ruby-merry-p445.html
 
 [dem24h.vn]
 match = -35.0%%
