--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-18 13:38:43
+lastsearch = 2024-07-18 23:48:06
 
 [demxanh.com]
 match = -84.2%%
@@ -17,8 +17,8 @@ title = Tấm Trang Trí Khách Sạn cao cấp giá tốt nhất Hà Nội
 url = https://thegioidemviet.vn/tam-trang-tri-khach-san/
 
 [vinhtuong.com]
-match = -42.1%%
-title = Tấm trang trí Vĩnh Tường DECO Plus® In Lụa
+match = -110.5%%
+title = Tấm thạch cao, Tấm xi măng trang trí Vĩnh Tường DECO Plus
 url = https://vinhtuong.com/tam-trang-tri-vinh-tuong-deco-plus
 
 [www.vietuchotel.vn]
@@ -64,7 +64,7 @@ url = https://www.tripadvisor.com/Attraction_Review-g293928-d3857023-Reviews-Hon
 [www.vietvet.org]
 match = -100.0%%
 title = Untitled
-url = http://www.vietvet.org/army047.htm
+url = http://www.vietvet.org/army282.htm
 
 [www.vietnamcoracle.com]
 match = -31.6%%
@@ -260,4 +260,9 @@ url = https://gis.harnett.org/portal/home/search.html?t=content&q=tags:"efektler
 match = -21.1%%
 title = Các Khách Sạn 4 Sao ở Melbourne
 url = https://www.booking.com/fourstars/city/au/melbourne.vi.html
+
+[spie.org]
+match = -121.1%%
+title = SPIE-Photonics-West-2024-Technical-Program.pdf
+url = https://spie.org/documents/ConferencesExhibitions/Programs/2024/SPIE-Photonics-West-2024-Technical-Program.pdf
 
