--- a/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
+++ b/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-phu-warmdream-freesize-phi-lua.html
 lastopen = 2024-06-10 00:45:38
 
 [search]
-lastsearch = 2024-07-18 16:13:01
+lastsearch = 2024-07-18 23:49:27
 
 [changagoidem.co]
 match = 8.3%%
@@ -42,8 +42,8 @@ title = Điệp Xuân Chăn ga gối đệm Điệp Xuân
 url = https://diepxuan.com/
 
 [muathongminh.vn]
-match = -8.3%%
-title = Lịch sử giá Bộ chăn ga gối phi lụa Dream city chất ...
+match = -16.7%%
+title = Lịch sử giá Bộ chăn ga gối phi lụa Dream city chất liệu ...
 url = https://muathongminh.vn/bo-chan-ga-goi-phi-lua-theu-chu-h-luxury-life-mem-min-sang-trong-set-lua-4-mon-chan-tran-he-mat-lanh-p.1__16513396310__230538458
 
 [simplici7y.com]
