--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-07-18 22:31:59
+lastsearch = 2024-07-18 23:51:19
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -32,9 +32,9 @@ title = 5 loại chiếu cực mát lưng cho mùa hè, được ưa chuộng ..
 url = https://www.dienmayxanh.com/kinh-nghiem-hay/5-loai-chieu-nam-mat-lim-lung-cho-mua-he-duoc-ua-1267470
 
 [chieutrucsaigon.com]
-match = 0.0%%
-title = BÁN CHIẾU TRÚC MẮT NHỎ 1M6 HƯƠNG TRÚC
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-mat-nho-1m6-huong-truc-70.html
+match = -30.4%%
+title = CHIẾU TRÚC CAO BẰNG 1M GIÁ RẺ LOẠI 1 TẠI TPHCM
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-cao-bang-1m-gia-re-tai-tphcm-69.html
 
 [shopee.vn]
 match = -43.5%%
@@ -415,4 +415,9 @@ url = https://lsvn.vn/dau-gia-350-tac-pham-nha-dau-gia-le-auction-house-nghe-thu
 match = -95.7%%
 title = Tuyên truyền kỷ niệm 80 năm Ngày Tổng tuyển cử đầu tiên ...
 url = https://tayninh.dcs.vn/vi/news/thoi-su/tuyen-truyen-ky-niem-80-nam-ngay-tong-tuyen-cu-dau-tien-bau-quoc-hoi-viet-nam-06-01-1946-06-01-2026-6853.html
+
+[www.5giay.vn]
+match = 47.8%%
+title = Chiếu trúc Việt Nam giá rẻ.
+url = https://www.5giay.vn/threads/chieu-truc-viet-nam-gia-re.8437156/
 
