--- a/images/nem-caosu-thien-nhien-150x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-150x200x10-felix/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-150x200x10-felix.html
 lastopen = 2024-06-07 00:14:57
 
 [search]
-lastsearch = 2024-07-18 23:39:40
+lastsearch = 2024-07-18 23:51:30
 
 [thefelix.vn]
 match = -50.0%%
@@ -17,9 +17,9 @@ title = Nệm cao su thiên nhiên Felix - Nệm Khang Anh
 url = https://nemkhanganh.com/san-pham/nem-cao-su-thien-nhien-felix/
 
 [www.facebook.com]
-match = 13.3%%
-title = Felix - Nệm cao su thiên nhiên
-url = https://www.facebook.com/thefelix.vn/posts/nệm-cao-cấp-giá-xưởngnệm-cao-su-thiên-nhiên-felix-hàng-việt-nam-chất-lượng-cao-n/722093250081830/
+match = 31.6%%
+title = Felix - Nệm cao su thiên nhiên | Ho Chi Minh City
+url = https://www.facebook.com/thefelix.vn/
 
 [bsa.org.vn]
 match = 57.1%%
@@ -120,4 +120,9 @@ url = https://nemkhuyenmai.com/nem-cao-su-thien-nhien-unique.html
 match = 65.8%%
 title = Nệm Cao Su Thiên Nhiên Hoạt Tính RELAX
 url = https://nemtrungson.vn/san-pham/nem-cao-su-thien-nhien-hoat-tinh-relax/
+
+[www.sieuthinem.vn]
+match = 47.4%%
+title = Nệm cao su thiên nhiên 100%% chính hãng, giá rẻ
+url = https://www.sieuthinem.vn/nem-cao-su-chinh-hang.html
 
