--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-18 23:35:47
+lastsearch = 2024-07-19 00:20:43
 
 [tiki.vn]
 match = -138.9%%
 title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
 
 [nemxinh.net]
 match = 50.0%%
@@ -17,9 +17,9 @@ title = Kích thước 160x200
 url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
-match = -188.9%%
-title = Everon ESB-22054 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esb22054.html
+match = -183.3%%
+title = Everon EPM-22060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22060.html
 
 [lavendervn.com]
 match = -22.2%%
