--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-18 16:16:19
+lastsearch = 2024-07-19 00:18:32
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = -76.2%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -28.6%%
+title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -242,9 +242,9 @@ title = Nhà đầu tư Thái Lan tìm hiểu cơ hội đầu tư tại Việt 
 url = https://yuanta.com.vn/tin-tuc/nha-dau-tu-thai-lan-tim-hieu-co-hoi-dau-tu-tai-viet-nam
 
 [hoanghoa.gov.vn]
-match = -100.0%%
-title = Trao quà cho thân nhân gia đình liệt sĩ tại Hoằng Hóa
-url = http://hoanghoa.gov.vn/web/trang-chu/tin-tuc-su-kien/trao-qua-cho-than-nhan-gia-dinh-liet-si-tai-hoang-hoa.html
+match = -114.3%%
+title = Đoàn thẩm định thôn NTM kiểu mẫu tại thôn Kim Tân 1 và ...
+url = http://hoanghoa.gov.vn/web/trang-chu/tin-tuc-su-kien/nong-nghiep-amp;-ptnt/doan-tham-dinh-thon-ntm-kieu-mau-tai-thon-kim-tan-1-va-thon-kim-tan-2-xa-hoang-tien.html
 
 [baonamdinh.vn]
 match = -66.7%%
