--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-18 23:40:25
+lastsearch = 2024-07-19 00:14:30
 
 [www.reddit.com]
-match = -82.6%%
-title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+match = 4.3%%
+title = Nemesis hits rank 2 Korea - 1726 lp
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
@@ -332,9 +332,9 @@ title = July-August 2024 (Volume 76, Number 3)
 url = https://monthlyreview.org/2024/07/01/mr-076-03-2024-07_0/
 
 [synapse.koreamed.org]
-match = -25.0%%
-title = Original Article
-url = https://synapse.koreamed.org/articles/1119644
+match = -2100.0%%
+title = 2
+url = https://synapse.koreamed.org/articles/1096353
 
 [www.svcleanenergy.org]
 match = 0.0%%
