--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-18 22:15:10
+lastsearch = 2024-07-19 00:17:08
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -82,8 +82,8 @@ title = Căn hộ cho thuê tại Bras-Panon, Saint-Benoît, Réunion - Airbnb
 url = https://www.airbnb.com.vn/rooms/1104230023148123684
 
 [comehome.com.vn]
-match = -90.9%%
-title = TOP mẫu giường tầng cho bé trai, bé gái ... - Come Home
+match = -40.9%%
+title = TOP mẫu giường tầng cho bé trai, bé gái ...
 url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 
 [anawood.vn]
