--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-18 23:50:21
+lastsearch = 2024-07-19 00:15:01
 
 [thamaulac.com.vn]
-match = -88.9%%
-title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
-url = https://thamaulac.com.vn/
+match = -22.2%%
+title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
+url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [xoptraisan.info]
-match = -11.1%%
-title = Thảm xốp tranh giao thông 60×60
-url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
+match = 22.2%%
+title = Thảm nỉ ghép Tường Lâm 60×60
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
 
 [thamvinhthuan.com]
-match = 0.0%%
-title = Thảm xốp hoạt hình 60 x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-hoat-hinh-60-x-60-cm/
+match = 16.7%%
+title = Thảm xốp một màu 60cm x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
 
 [trieuchau.com]
 match = -61.1%%
@@ -27,9 +27,9 @@ title = Thảm Trải Sàn TPHCM - THẢM XỐP MÀU 60X60X1.2CM
 url = http://trieuchau.com/en-us/1057/27906/Tham-xop-60x60cm/THAM-XOP-MAU-60X60X12CM
 
 [shopee.vn]
-match = -138.9%%
-title = Thảm xốp trải sàn - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/thảm xốp/trải sàn
+match = -111.1%%
+title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
 
 [vatlieulotsan.com]
 match = -55.6%%
