CI images update

--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-18 23:52:38
+lastsearch = 2024-07-19 00:32:32
 
 [www.tui.co.uk]
-match = -33.3%%
-title = Holiday Types 2024/25
-url = https://www.tui.co.uk/holidays
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [uk.trip.com]
 match = -233.3%%
@@ -42,8 +42,8 @@ title = TUI commands logging??? - Forums
 url = https://www.cfd-online.com/Forums/fluent/45792-tui-commands-logging.html
 
 [www.reddit.com]
-match = -333.3%%
-title = TUI Fly Belgium 737 flying in North America? : r/flightradar24
+match = -208.3%%
+title = TUI Fly Belgium 737 flying in North America?
 url = https://www.reddit.com/r/flightradar24/comments/19daoc4/tui_fly_belgium_737_flying_in_north_america/
 
 [www.travelgossip.co.uk]
@@ -345,4 +345,9 @@ url = https://www.theguardian.com/business/2022/jun/14/tui-flight-delays-cancell
 match = -333.3%%
 title = Risk factors associated with the severity of overactive ...
 url = https://www.nature.com/articles/s41598-024-67326-w
+
+[www.essencemediacom.com]
+match = -183.3%%
+title = EssenceMediacom: Breakthrough for Brands
+url = https://www.essencemediacom.com/
 
