--- a/images/vo-goi-dreamland-50x70-tr/config.ini
+++ b/images/vo-goi-dreamland-50x70-tr/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-dreamland-50x70-tr.html
 lastopen = 2024-06-07 00:26:33
 
 [search]
-lastsearch = 2024-07-18 23:20:26
+lastsearch = 2024-07-19 00:36:04
 
 [furlife.vn]
 match = 70.8%%
-title = Vỏ Gối Dreamland - TR 23
-url = https://furlife.vn/vo-goi-dreamland-tr-23.p100020939170.html
+title = Vỏ Gối Dreamland - TR 18
+url = https://furlife.vn/vo-goi-dreamland-tr-18.p100015384455.html
 
 [www.furlife.vn]
 match = 70.8%%
@@ -150,4 +150,9 @@ url = https://www.tripadvisor.com/ShowUserReviews-g147293-d218524-r2381177-Excel
 match = -52.0%%
 title = Self mutilation cutting statistics [sfanCl]
 url = http://www.24hgold.com/english/link_company.aspx?param=website&id=7394080324H11690&urlparam=https://xn----9sblbban5beclw3gwa3cj5c.xn--p1ai/26749183fe43y
+
+[www.y1tyzksk.com]
+match = -88.0%%
+title = News educations days Marywood Ranks Among Best Flight ...
+url = http://www.y1tyzksk.com/index3.php?name=https://xn----7sbpggckxyhggn0ksbh.xn--p1ai/ouAFIVNO53fe
 
