--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-18 23:45:19
+lastsearch = 2024-07-19 00:30:19
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,9 +52,9 @@ title = List of cities in Vietnam
 url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 
 [books.google.com]
-match = -43.5%%
-title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYqVa7NZG&sig=ACfU3U378yqu3XDKIW7X0AU396sZiU72AQ&hl=en&sa=X&ved=2ahUKEwilr5fvhLGHAxVTOjQIHUk4C00Q6AF6BAgiEAM
+match = -65.2%%
+title = National Geographic Collegiate Atlas of the World
+url = https://books.google.com/books?id=gMaha-3d6voC&pg=PA367&lpg=PA367&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=E7Ojziw45K&sig=ACfU3U3hQFXmRu0gww0V7Fq5TAfIYFb0KA&hl=en&sa=X&ved=2ahUKEwirss32jrGHAxXdFlkFHZB5CVQQ6AF6BAghEAM
 
 [www.travelweekly.com]
 match = -87.0%%
