--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-07-18 23:14:35
+lastsearch = 2024-07-19 00:34:04
 
 [demxanh.com]
-match = 44.8%%
-title = Chiếu điều hòa cao su non màu hồng đậm
-url = https://demxanh.com/chieu-cao-su-non-mau-hong.html
+match = 27.6%%
+title = Chiếu điều hòa cao su non Tencel vàng chanh
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-vang-chanh.html
 
 [leflair.com]
 match = 6.9%%
