--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-18 18:34:45
+lastsearch = 2024-07-19 00:32:09
 
 [shopee.vn]
-match = -8.3%%
-title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
-url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
+match = -87.5%%
+title = Thảm Len mịn khổ 40x60 siêu thấm hút, chống trơn trượt ...
+url = https://shopee.vn/Thảm-Len-mịn-khổ-40x60-siêu-thấm-hút-chống-trơn-trượt-in-hình-logo-bàn-chân-i.537614356.24901886559
 
 [lepetit.com.vn]
 match = -66.7%%
-title = Thảm lau chân lông xù hình học thấm nước, chống trượt ...
-url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
+title = Thảm lau chân lông xù màu trơn thấm nước, chống trượt ...
+url = https://lepetit.com.vn/tham-long-xu-chu-nhat-ma-u-tron-tham-nuoc-chong-truot-40x60-cm
 
 [tiki.vn]
 match = -54.2%%
@@ -37,9 +37,9 @@ title = Thảm Welcome (40Cmx60Cm) - NH
 url = https://bichha.vn/tham-welcome-40cmx60cm-nh.html
 
 [www.lottemart.vn]
-match = 45.8%%
-title = Thảm Len Hình Thú 40x60 cm
-url = https://www.lottemart.vn/en-vtu/product/tham-len-hinh-thu-40x-60-cm-random-color-delivery-8936186271359-p46359
+match = -45.8%%
+title = Thảm Len Hình Thú 40x60 cm (Giao Màu Ngẫu Nhiên)
+url = https://www.lottemart.vn/vi-nsg/product/animal-patterned-wool-rug-40x60cm-random-color-delivery-8936186271359-p46359
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -90,4 +90,9 @@ url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225
 match = -4.2%%
 title = Thảm lau chân phòng tắm phòng khách 40*60cm
 url = https://huyenikea.com/products/tham-lau-chan-phong-tam-phong-khach-40-60cm-2
+
+[dathangsi.vn]
+match = 20.8%%
+title = Thảm tròn BathRoom 40x60 (Nhung)
+url = https://dathangsi.vn/10497-tha-m-tro-n-bathroom-40x60-nhung-.html
 
