CI images update

--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-18 18:16:35
+lastsearch = 2024-07-19 00:45:12
 
 [www.lazada.vn]
 match = -55.6%%
@@ -275,4 +275,9 @@ url = https://lists.ovirt.org/archives/list/users@ovirt.org/thread/VPNFIG4CZKUFJ
 match = 0.0%%
 title = Người Việt California
 url = https://www.facebook.com/groups/nvca16/
+
+[sagarmala.gov.in]
+match = -11.1%%
+title = MARITIME INDIA VISION 2030
+url = https://sagarmala.gov.in/sites/default/files/MIV 2030 Report.pdf
 
