--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-19 00:14:50
+lastsearch = 2024-07-19 00:45:45
 
 [www.facebook.com]
 match = -141.2%%
@@ -27,9 +27,9 @@ title = Royal Durian Singapore - ⛟ Free delivery Get 4kg of Mao Shan ...
 url = https://m.facebook.com/RoyalDurian/photos/a.3010278729046072/3525143447559595/?type=3
 
 [en.wikipedia.org]
-match = 20.0%%
-title = Chinese polearm
-url = https://en.wikipedia.org/wiki/Chinese_polearm
+match = 0.0%%
+title = Tang dynasty
+url = https://en.wikipedia.org/wiki/Tang_dynasty
 
 [www.amazon.com]
 match = -135.3%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Seeing the unseen of Chinese herbal medicine processing ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
+match = -194.1%%
+title = Nine traditional Chinese herbal formulas for the treatment ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5036551/
 
 [books.google.com]
 match = -194.1%%
