--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-18 15:22:26
+lastsearch = 2024-07-19 00:44:17
 
 [shopee.vn]
 match = -36.8%%
@@ -17,9 +17,9 @@ title = Chiếu tre hạt vàng cao cấp mắt mai không viền 1m4x1m9
 url = https://chieutrelanlan.com/chieu-tre-hat-vang-cao-cap-mat-mai-khong-vien-1m4x1m9-85.html
 
 [vongxepsaigon.vn]
-match = -100.0%%
-title = Chiếu trúc chiếu tre 1m2 hạt nâu đen hàng tốt loại 1
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m2-hat-nau-den-hang-tot-loai-1/
+match = -168.4%%
+title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-120cm/
 
 [chieutrelinhchi.com]
 match = -94.7%%
@@ -28,8 +28,8 @@ url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-
 
 [www.youtube.com]
 match = -136.8%%
-title = Cô Dạy Em Tập Thể Dục Buối Sáng - Nhạc Thiếu Nhi Sôi ...
-url = https://www.youtube.com/watch?v=6w-QNggXsJg
+title = Nhạc Thiếu Nhi Vui Nhộn Bé Đến Khu Vui Chơi Thiếu Nhi ...
+url = https://www.youtube.com/watch?v=1kfm-HBh_-g
 
 [dochoihoangthu.com]
 match = -121.1%%
