--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-18 21:15:12
+lastsearch = 2024-07-19 00:46:31
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -193,8 +193,8 @@ url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
 match = -145.0%%
-title = odiar suporte é bom senso 🤬 #minerva #cblol #ilhadaslendas ...
-url = https://www.tiktok.com/@gustavominerva/video/7389861157823204650
+title = Authentic Korean Street Food in Parramatta | Tteobokki & ...
+url = https://www.tiktok.com/@jensfoodfeed/video/7326417846177697025
 
 [www.imdb.com]
 match = 0.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -110.0%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -160.0%%
+title = (Olympics) Confusion reigns after chaotic finish in short ...
+url = https://en.yna.co.kr/view/AEN20180213013100315
 
 [www.vlr.gg]
 match = 5.6%%
