CI images update

--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-18 17:45:07
+lastsearch = 2024-07-19 01:35:08
 
 [www.linkedin.com]
 match = -172.7%%
@@ -380,4 +380,9 @@ url = https://www.nguoi-viet.com/
 match = 0.0%%
 title = Moeller, Jon
 url = https://statistik.d-u-v.org/getresultperson.php?runner=106449
+
+[www.letsdothis.com]
+match = -200.0%%
+title = Mt. Tam Trail Run - Running in Mill Valley
+url = https://www.letsdothis.com/us/e/mt-tam-trail-run-168359
 
