--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-07-18 09:40:09
+lastsearch = 2024-07-19 01:36:18
 
 [www.diepxuan.com]
-match = 17.9%%
-title = Điệp Xuân Chiếu điều hòa mây 150x190
-url = https://www.diepxuan.com/chieu-dieu-hoa-may-150x190.html
+match = -10.7%%
+title = Nệm everhome TC 15F 16 20 - Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
 
 [www.qcyc.ca]
 match = -53.6%%
