--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-07-18 22:33:12
+lastsearch = 2024-07-19 01:35:29
 
 [www.sendo.vn]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = 30*30*18 tấm - Thảm xốp mặt nỉ ghép Âu Lạc
 url = https://trieuchau.com/vi-vn/1057/28077/Tham-Xop-30x30cm/303018-tam--Tham-xop-mat-ni-ghep-Au-Lac
 
 [www.lazada.vn]
-match = -327.3%%
-title = Thảm xốp lót sàn cao cấp 60x60 - Bộ gồm 6-12-18-24-30- ...
-url = https://www.lazada.vn/products/tham-xop-lot-san-cao-cap-60x60-bo-gom-6-12-18-24-30-36-42-48-mieng-i1886200932.html
+match = -109.1%%
+title = BỘ THẢM XỐP LÓT TRẢI SÀN CAO CẤP
+url = https://www.lazada.vn/products/bo-tham-xop-lot-trai-san-cao-cap-tham-xop-lot-san-van-go-bo-gom-6-12-18-24-30-36-42-48-tam-tham-trai-san-i377144776.html
 
 [tayphuthuan.com]
 match = -336.4%%
@@ -85,4 +85,24 @@ url = https://thamxoptraisan.com/tham-tap-vo-18mm/
 match = -54.5%%
 title = Thảm Xốp Lót Sàn Tập Võ 18mm
 url = https://thamchobe.com/tham-xop-lot-san-tap-vo-18mm/
+
+[khovatlieusan.com]
+match = 63.6%%
+title = THẢM TẬP VỎ
+url = https://khovatlieusan.com/tham-tap-vo-889656.html
+
+[marcusnmarcus.vn]
+match = -27.3%%
+title = Lưu trữ Thảm xốp cho bé
+url = https://marcusnmarcus.vn/danh-muc-san-pham/gam-nuou-do-choi/tham-xop-cho-be/
+
+[lamquangphat.vn]
+match = -136.4%%
+title = Thảm xốp ghép vân gỗ tấm lớn 1m x 1m
+url = https://lamquangphat.vn/tham-xop-ghep-van-go-tam-lon-1m-x-1m.html
+
+[www.facebook.com]
+match = -200.0%%
+title = Thảm Xốp Trải Sàn Sỉ Lẻ | Ho Chi Minh City
+url = https://www.facebook.com/thamxopsile/
 
