CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-18 16:18:35
+lastsearch = 2024-07-19 01:47:36
 
 [www.tiktok.com]
 match = -41.2%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ5yxDA22&sig=ACfU3U2D_dBYcLaYwZo3T9KDp5zbVdK2lg&hl=en&sa=X&ved=2ahUKEwi65eiBobCHAxVMEFkFHeViDpcQ6AF6BAgcEAM
+match = -17.6%%
+title = The Bankers Encyclopedia
+url = https://books.google.com/books?id=r4U8Z83fm_cC&pg=PA95&lpg=PA95&dq=man+in+hoa+dep+16&source=bl&ots=GLYLgGVZkX&sig=ACfU3U2XsaWElj0K-c7ZVBb9M2J1QWYMkA&hl=en&sa=X&ved=2ahUKEwi5_c2ZoLGHAxXtl4kEHQQ4A0YQ6AF6BAgqEAM
 
 [tax.vermont.gov]
 match = -29.4%%
