--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-18 17:20:21
+lastsearch = 2024-07-19 01:47:09
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -14,7 +14,7 @@ url = https://en.wikipedia.org/wiki/March_First_Movement
 [www.britannica.com]
 match = 0.0%%
 title = 
-url = https://www.britannica.com/event/Gwangju-Uprising
+url = https://www.britannica.com/biography/Park-Chung-Hee
 
 [www.38north.org]
 match = -100.0%%
@@ -62,9 +62,9 @@ title = Runeterra Reforged Championship
 url = https://liquipedia.net/tft/Runeterra_Reforged/Championship
 
 [www.youtube.com]
-match = -21.7%%
-title = How to Use Korean Sentence Ending -네요
-url = https://www.youtube.com/watch?v=UFiSNO0znro
+match = -11.8%%
+title = I'm back in Korea
+url = https://www.youtube.com/watch?v=uk4bqEQ8uiU
 
 [www.asianstudies.org]
 match = 17.4%%
