--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-19 00:29:57
+lastsearch = 2024-07-19 01:46:29
 
 [www.kymdan.com]
 match = 4.2%%
@@ -17,9 +17,9 @@ title = Bộ Ga Chun Tencel Việt Á - Siêu Mát [SALE -50%%]
 url = https://thegioidemviet.vn/bo-ga-chun-he-tc08/
 
 [toanhuyen.vn]
-match = 6.2%%
-title = Bộ Chăn Ga 160x200cm Ga Phủ Lasante Vải Tencel
-url = https://toanhuyen.vn/san-pham/bo-chan-ga-160x200cm-ga-phu-lasante-vai-tencel-xam-dam-theu-anh-dao/
+match = -21.9%%
+title = Bộ Chăn Ga Lasante Vải Tencel - Đỏ Ruby Ga Chun ...
+url = https://toanhuyen.vn/san-pham/bo-chan-ga-lasante-vai-tencel-do-ruby-ga-chun-180x200cm/
 
 [yeshomebedding.com]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = bộ ga everon esbm 21016
 url = https://yeshomebedding.com/bo-chun-chan-everon-esbm-21016-modal
 
 [www.lazada.vn]
-match = -15.6%%
-title = Bộ ga chun chần Kim Cương vải Tencel 1 màu kích thước ...
-url = https://www.lazada.vn/products/bo-ga-chun-chan-kim-cuong-vai-tencel-1-mau-kich-thuoc-160x200-180x200cm-i2397238682.html
+match = -12.5%%
+title = Bộ ga chun chần Kim Cương 5 món chất liệu Tencel 1 màu ...
+url = https://www.lazada.vn/products/bo-ga-chun-chan-kim-cuong-5-mon-chat-lieu-tencel-1-mau-thoang-mat-kich-thuoc-160x200-180x200cm-i2419505053.html
 
 [shopee.vn]
 match = -21.9%%
