--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-18 23:48:18
+lastsearch = 2024-07-19 01:49:35
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVFM3u2d&sig=ACfU3U0kKOwYOve8HsgqwZbpYqgeHoJOPw&hl=en&sa=X&ved=2ahUKEwigqczRoK-HAxWLE1kFHc_wDCgQ6AF6BAgYEAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVGJ2r4e&sig=ACfU3U3lSSFAPR-pYUh9czyweEM2jsexCQ&hl=en&sa=X&ved=2ahUKEwiyjprSoLGHAxVMjYkEHVavCTIQ6AF6BAgaEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
