--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-18 23:38:05
+lastsearch = 2024-07-19 01:48:40
 
 [hoa18.com]
 match = -84.2%%
@@ -12,9 +12,9 @@ title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
 url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -163.2%%
-title = Mộc Hương ta hoa vàng còn đáng chơi khi giá trị nó không ...
-url = https://www.youtube.com/watch?v=kOeDP1xRFpk
+match = -126.3%%
+title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
+url = https://www.youtube.com/watch?v=KAnEyj4H3PY
 
 [kallos.co]
 match = -105.3%%
@@ -112,9 +112,9 @@ title = Cách tính Công suất nguồn bức xạ, hiệu suất lượng tử
 url = https://vietjack.com/vat-ly-lop-12/cong-suat-nguon-buc-xa-hieu-suat-luong-tu.jsp
 
 [baolongan.vn]
-match = -136.8%%
-title = Thủ tướng Chính phủ làm việc với các Cơ quan đại diện ...
-url = https://baolongan.vn/thu-tuong-chinh-phu-lam-viec-voi-cac-co-quan-dai-dien-viet-nam-o-nuoc-ngoai-a179468.html
+match = -94.7%%
+title = Đức Huệ - Lan tỏa các tuyến đường xanh, sạch, đẹp
+url = https://baolongan.vn/duc-hue-lan-toa-cac-tuyen-duong-xanh-sach-dep-a179422.html
 
 [caycanhmoc.vn]
 match = -110.5%%
