--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-18 17:50:37
+lastsearch = 2024-07-19 01:52:28
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -62,19 +62,19 @@ title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
 url = https://moveek.com/rap/cinestar-kien-giang/
 
 [baolongan.vn]
-match = -125.0%%
-title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
-url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
+match = -31.2%%
+title = Nhớ nghề dệt chiếu quê tôi
+url = https://baolongan.vn/nho-nghe-det-chieu-que-toi-a168262.html
 
 [www.youtube.com]
-match = -106.2%%
-title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
-url = https://www.youtube.com/watch?v=D5B7MtNy_kM
+match = -187.5%%
+title = Bánh Tằm Gà Cay nức tiếng Đất Mũi Cà Mau - Khói Lam ...
+url = https://www.youtube.com/watch?v=Ei-QB42Vbjk
 
 [books.google.com]
-match = -168.8%%
-title = Địa chí Thái Nguyên - Page 368 - Google Books Result
-url = https://books.google.com/books?id=U0ZRAQAAMAAJ&pg=PA368&lpg=PA368&dq=chieu+lac+soc+16&source=bl&ots=z7JZsT5l_p&sig=ACfU3U0p9eaQ-57MsZiuQ_Fqe0sEC5JhEA&hl=en&sa=X&ved=2ahUKEwiPzPHKtbCHAxU2GtAFHagKAx0Q6AF6BAgfEAM
+match = -231.2%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=HJTaAAAAMAAJ&pg=RA4-PA66&lpg=RA4-PA66&dq=chieu+lac+soc+16&source=bl&ots=I5hj_TpNcY&sig=ACfU3U0xo548AeFvq1A5jb15lNKsWr6G-Q&hl=en&sa=X&ved=2ahUKEwiAiMykobGHAxU3g4kEHQq1BF0Q6AF6BAgbEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
