--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-18 23:22:21
+lastsearch = 2024-07-19 01:52:50
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title =
 url = https://en.wikipedia.org/wiki/MC_Ren
 
 [books.google.com]
-match = -280.0%%
-title = The Letter to Ren An and Sima Qian’s Legacy
-url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fsiMVjxZ9&sig=ACfU3U3aL5eriBTdLcteQmp_z8l5glXpHQ&hl=en&sa=X&ved=2ahUKEwiCppLe_7CHAxVLLzQIHZ3wD-EQ6AF6BAgwEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlflJLsp5&sig=ACfU3U2p05gpeWgUUoI8nAoxGk065P7E9g&hl=en&sa=X&ved=2ahUKEwik9pivobGHAxV5jYkEHd79BrAQ6AF6BAgYEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
