CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-19 00:30:19
+lastsearch = 2024-07-19 02:12:24
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,9 +52,9 @@ title = List of cities in Vietnam
 url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 
 [books.google.com]
-match = -65.2%%
-title = National Geographic Collegiate Atlas of the World
-url = https://books.google.com/books?id=gMaha-3d6voC&pg=PA367&lpg=PA367&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=E7Ojziw45K&sig=ACfU3U3hQFXmRu0gww0V7Fq5TAfIYFb0KA&hl=en&sa=X&ved=2ahUKEwirss32jrGHAxXdFlkFHZB5CVQQ6AF6BAghEAM
+match = -139.1%%
+title = Vietnam Travel Map Eighth Edition - Page 11 - Google Books Result
+url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA11&lpg=PA11&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz1ReghVx&sig=ACfU3U3PL1YuaEmZhYjV87qqpJs8awBBIA&hl=en&sa=X&ved=2ahUKEwjx95nfpbGHAxXOvokEHfRrDsYQ6AF6BAgmEAM
 
 [www.travelweekly.com]
 match = -87.0%%
