--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-18 22:14:38
+lastsearch = 2024-07-19 02:13:40
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -48,8 +48,8 @@ url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.26232696
 
 [www.thegioididong.com]
 match = -212.5%%
-title = Top 20 game online mobile (Android, iOS) hay nhất nên ...
-url = https://www.thegioididong.com/game-app/top-10-game-online-hay-nhat-tren-dien-thoai-android-ios-1312542
+title = Cách đeo lắc tay đẹp thời trang tinh tế cho cả nam, nữ phù ...
+url = https://www.thegioididong.com/hoi-dap/cach-deo-lac-tay-dep-thoi-trang-tinh-te-cho-ca-nam-1404615
 
 [saigontourist.edu.vn]
 match = -100.0%%
