--- a/images/ruot-nem-korea-180x200x09/config.ini
+++ b/images/ruot-nem-korea-180x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-180x200x09.html
 lastopen = 2024-06-11 23:29:58
 
 [search]
-lastsearch = 2024-07-19 00:34:46
+lastsearch = 2024-07-19 02:15:28
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -23,8 +23,8 @@ url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-har
 
 [www.youtube.com]
 match = -72.0%%
-title = Korea Proxy Haul 2 ♡ Trying out New A5 Wide Binders!
-url = https://www.youtube.com/watch?v=xN--lOqKXW8
+title = (German Phrase 33)@SonyYu “I am from Korea” in German
+url = https://www.youtube.com/watch?v=O9PvCvIBlAI
 
 [www.bbc.co.uk]
 match = 0.0%%
@@ -87,9 +87,9 @@ title =
 url = https://oec.world/en/profile/bilateral-country/kor/partner/deu
 
 [www.reddit.com]
-match = -100.0%%
-title = Korean equivalent to Emergen-C and Tylenol? : r/koreatravel
-url = https://www.reddit.com/r/koreatravel/comments/12jl64t/korean_equivalent_to_emergenc_and_tylenol/
+match = -24.0%%
+title = What german items are popular in Korea?
+url = https://www.reddit.com/r/korea/comments/o40qej/what_german_items_are_popular_in_korea/
 
 [momotherose.com]
 match = -16.0%%
@@ -130,4 +130,14 @@ url = https://www.tripadvisor.ca/ShowTopic-g294196-i8160-k14562473-Bringing_OTC_
 match = -52.0%%
 title = Neiman/Bergdorf of Seoul - Shinsegae Gangnam
 url = https://www.tripadvisor.com/ShowUserReviews-g294197-d9755552-r471989079-Shinsegae_Gangnam-Seoul.html
+
+[m.youtube.com]
+match = 0.0%%
+title = 
+url = https://m.youtube.com/watch?v=Uh8hRmACJm0
+
+[twitter.com]
+match = -100.0%%
+title = I need names of people under 30 who are entrepreneurs. ...
+url = https://twitter.com/Omo_adedoyin8/status/1567232909639139331
 
