--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-19 00:45:45
+lastsearch = 2024-07-19 02:11:53
 
 [www.facebook.com]
 match = -141.2%%
@@ -142,14 +142,14 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -194.1%%
-title = Nine traditional Chinese herbal formulas for the treatment ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5036551/
+match = -200.0%%
+title = Seeing the unseen of Chinese herbal medicine processing ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 
 [books.google.com]
 match = -194.1%%
 title = Actinobacteria: Prolific Producers of Bioactive Metabolites
-url = https://books.google.com/books?id=R6YEEAAAQBAJ&pg=PA60&lpg=PA60&dq=chan+4+kg+mao+tan&source=bl&ots=V9Hg5NLkrj&sig=ACfU3U2elpgdw6G4Yz5LJR7r6AE59e-u3w&hl=en&sa=X&ved=2ahUKEwiLq8m7i7GHAxWhhYkEHc7IDekQ6AF6BAgjEAM
+url = https://books.google.com/books?id=R6YEEAAAQBAJ&pg=PA60&lpg=PA60&dq=chan+4+kg+mao+tan&source=bl&ots=V9Hg5NSljm&sig=ACfU3U3MJzQXsjZ9UvD_UCkEz-F2nQE6dA&hl=en&sa=X&ved=2ahUKEwjF6rjQpbGHAxUTrYkEHTRsB3kQ6AF6BAgnEAM
 
 [s.click.aliexpress.com]
 match = -141.2%%
