--- a/images/nem-everon-140x200x9/config.ini
+++ b/images/nem-everon-140x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-140x200x9.html
 lastopen = 2024-06-06 17:10:12
 
 [search]
-lastsearch = 2024-07-18 23:37:21
+lastsearch = 2024-07-19 02:14:00
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -17,14 +17,14 @@ title = Nệm Everon Hàn Quốc cao cấp chính hãng, giá tốt 2023
 url = https://www.sieuthinem.vn/nem-everon.html
 
 [everon.online]
-match = 16.7%%
-title = Đệm bông ép Everon
-url = https://everon.online/products/dem-bong-ep-everon
+match = -105.0%%
+title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Artemis King Koil
+url = https://everon.online/collections/dem-everon-kich-thuoc-1m4-140-190-140-200-140x190-140x200
 
 [elec-horeca.com]
-match = 10.0%%
-title = Đại Lý Nệm Everon tại Đà Nẵng
-url = https://elec-horeca.com/dai-ly-nem-everon-tai-da-nang-id279.html
+match = -40.0%%
+title = Đại lý phân phối nệm tại Đà Nẵng
+url = https://elec-horeca.com/nem-chinh-hang-d9.html
 
 [tiki.vn]
 match = -20.0%%
@@ -32,8 +32,8 @@ title = Mua Tấm bảo vệ nệm Everon White
 url = https://tiki.vn/tam-bao-ve-nem-everon-white-p67937873.html?spid=67937879
 
 [aeonmalllogiplus.com.kh]
-match = -40.0%%
-title = POMA140/09 EVERON Poly mattress 140x200x09 ...
+match = -75.0%%
+title = POMA140/09 EVERON Poly mattress 140x200x09$320.00 ...
 url = https://aeonmalllogiplus.com.kh/product/poma-140-09-everon-poly-mattress-140-x-200-x-09/megadis
 
 [nemgiakho.com]
@@ -78,8 +78,8 @@ url = https://everon.vip/nem?page=1&productdimensions=2033,347,2005,1999,1974,83
 
 [everonvietnam.com]
 match = -135.0%%
-title = cushion – mattress - | Everon - Korean Pillows & Blankets
-url = https://everonvietnam.com/en/dem-nem/
+title = cushion - mattress - | Everon - Korean Pillows & Blankets
+url = https://everonvietnam.com/en/dem-nem/page/3/
 
 [thegioidemdep.com]
 match = -125.0%%
