--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-19 00:31:16
+lastsearch = 2024-07-19 02:15:50
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -58.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -72.7%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -11.8%%
@@ -127,9 +127,9 @@ title = @Jacquemus has just opened their pop up store in Seoul ...
 url = https://www.tiktok.com/@culted/video/7292084447212571937?lang=en
 
 [30rates.com]
-match = -39.1%%
-title = RIOT STOCK PRICE FORECAST TOMORROW, WEEK ...
-url = https://30rates.com/riot-stock
+match = -43.5%%
+title = USD TO KRW TODAY AND FORECAST TOMORROW, ...
+url = https://30rates.com/usd-to-krw-today-forecast-dollar-to-won
 
 [www.google.com]
 match = 0.0%%
