--- a/images/tui-warmdream-180x200x09/config.ini
+++ b/images/tui-warmdream-180x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 lastopen = 2024-06-17 10:35:51
 
 [search]
-lastsearch = 2024-07-18 23:40:46
+lastsearch = 2024-07-19 02:13:51
 
 [www.diepxuan.com]
 match = 10.5%%
@@ -24,7 +24,7 @@ url = https://rv-dreams.activeboard.com/mobile.spark?p=topic&topic=43740595
 [www.amazon.com]
 match = -50.0%%
 title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/Tx14C2FLBA8H5RI/?
+url = https://www.amazon.com/ask/questions/asin/B0773TH5Z1/1/ref=ask_ql_psf_ql_hza?sort=SUBMIT_DATE
 
 [unofficialwarmoth.com]
 match = -10.0%%
