CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-19 02:12:24
+lastsearch = 2024-07-19 02:32:19
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,11 +54,11 @@ url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 [books.google.com]
 match = -139.1%%
 title = Vietnam Travel Map Eighth Edition - Page 11 - Google Books Result
-url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA11&lpg=PA11&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz1ReghVx&sig=ACfU3U3PL1YuaEmZhYjV87qqpJs8awBBIA&hl=en&sa=X&ved=2ahUKEwjx95nfpbGHAxXOvokEHfRrDsYQ6AF6BAgmEAM
+url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA11&lpg=PA11&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz1Rf89UB&sig=ACfU3U0i3F71tCcFbxGakxmvArG4i7cpBA&hl=en&sa=X&ved=2ahUKEwjjw-GYqrGHAxWzlYkEHRA_AUsQ6AF6BAghEAM
 
 [www.travelweekly.com]
-match = -87.0%%
-title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda- Page 10
+match = -56.5%%
+title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda
 url = https://www.travelweekly.com/Hotels/Ho-Chi-Minh-City-Vietnam/Hotels-Near-Jade-Emperor-Pagoda-p4247472?s=2+u3NLAzhVE=u&pg=10
 
 [sonoivu.thaibinh.gov.vn]
