CI images update

--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-19 01:18:39
+lastsearch = 2024-07-19 02:44:06
 
 [chanrathanhthuy.com]
-match = -6.5%%
-title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
-url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
+match = 9.7%%
+title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
+url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
 
 [demxanh.com]
-match = -16.1%%
-title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
-url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
+match = -3.2%%
+title = Bộ sưu tập chăn ga gối cưới Singapore được săn lùng ...
+url = https://demxanh.com/bo-suu-tap-chan-ga-goi-cuoi-singapore-duoc-san-lung-nam-2020.html
 
 [songhongonline.vn]
 match = 50.0%%
@@ -82,9 +82,9 @@ title = Bộ chăn ga gối Cotton sọc vuông hai lớp ZH6289
 url = https://flexhouse.vn/bọ-chan-ga-goi-cotton-soc-vuong-hai-lop-zh6289
 
 [changagoidemsonghong.online]
-match = -22.6%%
-title = Những lưu ý cần nhớ khi chọn chăn ga gối Sông Hồng cưới
-url = https://changagoidemsonghong.online/nhung-luu-y-can-nho-khi-chon-chan-ga-goi-song-hong-cuoi.html
+match = -19.4%%
+title = Top 10+ bộ chăn ga gối Sông Hồng chính hãng giá tốt, được ...
+url = https://changagoidemsonghong.online/top-10-bo-chan-ga-goi-song-hong-chinh-hang-gia-tot-duoc-yeu-thich.html
 
 [www.facebook.com]
 match = -6.5%%
