--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-18 21:16:28
+lastsearch = 2024-07-19 02:45:34
 
 [changagoidemsonghong.com]
-match = 4.2%%
-title = Chăn ga gối classic cotton mã C16-C38
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
+match = -50.0%%
+title = Bảng giá Chăn Ga Gối Đệm Sông Hồng chính hãng 2024 ...
+url = https://changagoidemsonghong.com/
 
 [www.diepxuan.com]
 match = -58.3%%
@@ -42,14 +42,14 @@ title = Bộ Chăn Ga Gối Sông Hồng Tencel S16 01 Ga Chun
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-tencel-s1601-ga-chun.html
 
 [cuahangchangagoidem.com]
-match = -33.3%%
-title = Những Bộ Chăn Ga Gối Đệm Cao Cấp Sang Trọng Quý Phái
-url = https://cuahangchangagoidem.com/bo-chan-ga-goi-dem-cao-cap/
+match = -54.2%%
+title = Chăn Ga Gối Đệm Nhập Hàng Tận Xưởng Giá Tốt Freeship
+url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [tiki.vn]
-match = 0.0%%
-title = Bộ chăn ga gối hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=bộ chăn ga gối
+match = -33.3%%
+title = Chăn ga gối màu đen hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn ga gối màu đen
 
 [manbinhminh.com]
 match = -41.7%%
@@ -132,9 +132,9 @@ title = Mua bán bộ chăn ga gối nệm hàn quốc mới giá rẻ ở đâu
 url = https://dodungnoithat.vn/chan-ga-goi-nem-han-quoc-dep-gia-re-o-dau-sai-gon/
 
 [www.facebook.com]
-match = 29.2%%
-title = Chan ga goi nem Han Quoc gia re
-url = https://www.facebook.com/changagoinemhanquocgiare/?locale=fr_CA
+match = -29.2%%
+title = Chăn Ga Gối Đệm Giá Rẻ ( Lấy Hàng Tại Xưởng )
+url = https://www.facebook.com/groups/2582240008763254/
 
 [thitruongsi.com]
 match = -50.0%%
