--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-19 00:14:30
+lastsearch = 2024-07-19 02:45:02
 
 [www.reddit.com]
-match = 4.3%%
-title = Nemesis hits rank 2 Korea - 1726 lp
+match = -82.6%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
@@ -455,4 +455,14 @@ url = https://www.zing-asia.co.uk/Freshly-Frozen-Oriental-Food-from-Zing-Asia-Ch
 match = 4.3%%
 title = VALORANT Esports | Schedule
 url = https://valorantesports.com/en-US/valorantesports?leagues=vct_china
+
+[leg.wa.gov]
+match = -66.7%%
+title = SESSION LAWS
+url = https://leg.wa.gov/CodeReviser/documents/sessionlaw/1973pam1.pdf
+
+[www.usmcu.edu]
+match = -100.0%%
+title = U.S. Marines in Vietnam High Mobility and Standown 1969 ...
+url = https://www.usmcu.edu/Portals/218/U_S_ Marines in Vietnam High Mobility and Standown 1969  PCN 19000310300.pdf
 
