--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-07-19 00:17:51
+lastsearch = 2024-07-19 02:47:13
 
 [shopee.vn]
 match = -90.5%%
@@ -32,9 +32,9 @@ title = Cách Tính Diện Tích, Kích Thước Các Loại Giường Ngủ
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [www.sendo.vn]
-match = -19.0%%
-title = THẢM TRẢI GIƯỜNG [Được kiểm hàng] 23295380
-url = https://www.sendo.vn/tham-trai-giuong-duo-c-kie-m-ha-ng-23295380-117150966.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721174400325_undefined_-1_cateLvl2_0_41_23_-1
+match = -76.2%%
+title = Thảm Chân Giường Siêu Chất, Giá Gốc, Hàng Mới Mỗi Ngày
+url = https://www.sendo.vn/tham-chan-giuong.htm
 
 [everonvn.com.vn]
 match = -66.7%%
@@ -42,9 +42,9 @@ title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
 url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [tiki.vn]
-match = -100.0%%
-title = Mua Thảm trải giường lông nỉ nhung 2 lớp có thể dùng làm ...
-url = https://tiki.vn/tham-trai-giuong-long-ni-nhung-2-lop-co-the-dung-lam-trai-dem-tham-trai-san-chan-dap-co-cac-loai-kich-thuoc-p75990396.html?spid=147712629
+match = -38.1%%
+title = Tham trải giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=tham trải giường
 
 [www.diepxuan.com]
 match = 42.9%%
