CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-19 02:32:19
+lastsearch = 2024-07-19 03:36:26
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,13 +52,13 @@ title = List of cities in Vietnam
 url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 
 [books.google.com]
-match = -139.1%%
-title = Vietnam Travel Map Eighth Edition - Page 11 - Google Books Result
-url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA11&lpg=PA11&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz1Rf89UB&sig=ACfU3U0i3F71tCcFbxGakxmvArG4i7cpBA&hl=en&sa=X&ved=2ahUKEwjjw-GYqrGHAxWzlYkEHRA_AUsQ6AF6BAghEAM
+match = -65.2%%
+title = National Geographic Collegiate Atlas of the World
+url = https://books.google.com/books?id=gMaha-3d6voC&pg=PA367&lpg=PA367&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=E7Ojzjx5bQ&sig=ACfU3U36DFM7eRGsmiCA_QeYjvYRxOFXag&hl=en&sa=X&ved=2ahUKEwjXyY_DuLGHAxWyEVkFHWZJDzAQ6AF6BAgiEAM
 
 [www.travelweekly.com]
-match = -56.5%%
-title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda
+match = -87.0%%
+title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda- Page 10
 url = https://www.travelweekly.com/Hotels/Ho-Chi-Minh-City-Vietnam/Hotels-Near-Jade-Emperor-Pagoda-p4247472?s=2+u3NLAzhVE=u&pg=10
 
 [sonoivu.thaibinh.gov.vn]
