--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-19 02:45:47
+lastsearch = 2024-07-19 03:33:33
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -280,4 +280,9 @@ url = https://nhipcaudautu.vn/tai-chinh/thi-truong-rung-lac-dao-chieu-phut-cuoi-
 match = -118.8%%
 title = Thị trường rung lắc, đảo chiều phút cuối phiên
 url = https://m.nhipcaudautu.vn/tai-chinh/thi-truong-rung-lac-dao-chieu-phut-cuoi-phien-3359333/
+
+[www.mass.gov]
+match = -100.0%%
+title = MassHealth Adult Disability Supplement
+url = https://www.mass.gov/doc/masshealth-adult-disability-supplement-vietnamese/download
 
