--- a/images/nem-foam-dreamland-uc-200x220x20/config.ini
+++ b/images/nem-foam-dreamland-uc-200x220x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-200x220x20.html
 lastopen = 2024-06-07 00:49:31
 
 [search]
-lastsearch = 2024-07-19 01:52:06
+lastsearch = 2024-07-19 03:28:08
 
 [www.diepxuan.com]
 match = 21.9%%
@@ -39,7 +39,7 @@ url = https://thegioidemdep.com/dem-bong-ep-dreamland/
 [www.amazon.com]
 match = -31.2%%
 title = Do not buy. Mold, dipping, and bad customer service.
-url = https://www.amazon.com/portal/customer-reviews/mobile-media-feed/B00Q7EPV8O?physicalId=71VeE93seRL&imageExtension=jpg&reviewId=R30EV4DZQJPO4B
+url = https://www.amazon.com/portal/customer-reviews/mobile-media-feed/B0766BHJ2Y?physicalId=614QvvJARIL&imageExtension=jpg&reviewId=R30EV4DZQJPO4B
 
 [forum.mattressunderground.com]
 match = -12.5%%
@@ -47,9 +47,9 @@ title = Ultimate Dreams 13" Gel Memory Foam Mattress
 url = https://forum.mattressunderground.com/t/ultimate-dreams-13-gel-memory-foam-mattress-first-impressions/1121?page=4
 
 [forums.hardwarezone.com.sg]
-match = -31.2%%
-title = Mattress - which brand / types? Part 2 | Page 151
-url = https://forums.hardwarezone.com.sg/threads/mattress-which-brand-types-part-2.4501680/page-151
+match = -28.1%%
+title = Mattress - which brand / types? Part 2 | Page 87
+url = https://forums.hardwarezone.com.sg/threads/mattress-which-brand-types-part-2.4501680/page-87
 
 [www.youtube.com]
 match = -28.1%%
