--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-19 01:48:40
+lastsearch = 2024-07-19 03:28:49
 
 [hoa18.com]
 match = -84.2%%
@@ -12,9 +12,9 @@ title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
 url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -126.3%%
-title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
-url = https://www.youtube.com/watch?v=KAnEyj4H3PY
+match = -105.3%%
+title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
+url = https://www.youtube.com/watch?v=demL5DzJK5M
 
 [kallos.co]
 match = -105.3%%
@@ -112,9 +112,9 @@ title = Cách tính Công suất nguồn bức xạ, hiệu suất lượng tử
 url = https://vietjack.com/vat-ly-lop-12/cong-suat-nguon-buc-xa-hieu-suat-luong-tu.jsp
 
 [baolongan.vn]
-match = -94.7%%
-title = Đức Huệ - Lan tỏa các tuyến đường xanh, sạch, đẹp
-url = https://baolongan.vn/duc-hue-lan-toa-cac-tuyen-duong-xanh-sach-dep-a179422.html
+match = -136.8%%
+title = Thủ tướng Chính phủ làm việc với các Cơ quan đại diện ...
+url = https://baolongan.vn/thu-tuong-chinh-phu-lam-viec-voi-cac-co-quan-dai-dien-viet-nam-o-nuoc-ngoai-a179468.html
 
 [caycanhmoc.vn]
 match = -110.5%%
@@ -157,9 +157,9 @@ title = Soái Ca Comic – Truyện Tranh Online
 url = https://soaicacomic.top/
 
 [trithucvn.co]
-match = -168.4%%
-title = Cảnh sát nổ súng, một người chết gần địa điểm diễn ra đại ...
-url = https://trithucvn.co/the-gioi/canh-sat-no-sung-mot-nguoi-chet-gan-dia-diem-dien-ra-dai-hoi-dch-tai-milwaukee.html
+match = -136.8%%
+title = Khảo sát: Ông Trump dẫn trước Tổng thống Biden trên ...
+url = https://trithucvn.co/the-gioi/khao-sat-ong-trump-dan-truoc-tong-thong-biden-tren-toan-quoc.html
 
 [bptv.vn]
 match = -57.9%%
@@ -200,4 +200,9 @@ url = https://thainguyentv.vn/tin-24h-ngay-1372024-105421.html
 match = -68.4%%
 title = Lái tàu bị ném đá vỡ đầu khi qua Yên Bái
 url = https://vnews.gov.vn/news/lai-tau-bi-nem-da-vo-dau-khi-qua-yen-bai-127309.htm
+
+[tuoitrethudo.vn]
+match = -115.8%%
+title = Mỗi địa phương phải xác định được sản phẩm công ...
+url = https://tuoitrethudo.vn/moi-dia-phuong-phai-xac-dinh-duoc-san-pham-cong-nghiep-van-hoa-254820.html
 
