--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-19 03:16:00
+lastsearch = 2024-07-19 03:31:14
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,14 +67,14 @@ title = Nhớ nghề dệt chiếu quê tôi
 url = https://baolongan.vn/nho-nghe-det-chieu-que-toi-a168262.html
 
 [www.youtube.com]
-match = -187.5%%
-title = Bánh Tằm Gà Cay nức tiếng Đất Mũi Cà Mau - Khói Lam ...
-url = https://www.youtube.com/watch?v=Ei-QB42Vbjk
+match = -256.2%%
+title = Tin tức 24h tối 18/7: Mâu thuẫn, em trai bị anh ruột dùng hung ...
+url = https://www.youtube.com/watch?v=hteDrQdI8UA
 
 [books.google.com]
 match = -218.8%%
-title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+16&source=bl&ots=LZu6TSbEWf&sig=ACfU3U11G6SgyOfjxPTZtskYEz6RJadaZA&hl=en&sa=X&ved=2ahUKEwjqxr_6s7GHAxXqOTQIHYzBBiwQ6AF6BAgeEAM
+title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHabBP6lzb&sig=ACfU3U3HcWMRq-e1WWiuQXVlVfus_b3c2Q&hl=en&sa=X&ved=2ahUKEwjxuLSut7GHAxVyEFkFHTaUCw8Q6AF6BAgeEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
