CI images update

--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-19 03:31:59
+lastsearch = 2024-07-19 03:52:06
 
 [gobearcats.com]
 match = -142.1%%
@@ -202,9 +202,9 @@ title = Katie Pollard, PhD
 url = https://gladstone.org/people/katie-pollard
 
 [www.nature.com]
-match = -205.3%%
-title = Effects of high-intensity interval training on cardiometabolic ...
-url = https://www.nature.com/articles/s41391-024-00867-3
+match = -173.7%%
+title = Functional gene delivery to and across brain vasculature of ...
+url = https://www.nature.com/articles/s41467-023-38582-7
 
 [faculty.mdanderson.org]
 match = 26.3%%
