--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-19 02:28:29
+lastsearch = 2024-07-19 03:51:55
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [songhongonline.vn]
 match = 0.0%%
-title = Bộ sản phẩm SH_BC23 084
-url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-084
+title = Bộ sản phẩm SH_BC23 075
+url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-075
 
 [everon.online]
 match = 50.0%%
@@ -72,9 +72,9 @@ title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
 url = https://songhong.info/chan-ga-goi-khong-chan-bc62
 
 [kona.com.vn]
-match = 41.2%%
-title = Bộ ga chần chăn 4 mùa Diamond 188 - kona
-url = https://kona.com.vn/products/bo-ga-chan-chan-4-mua-diamond-188
+match = 58.8%%
+title = Bộ ga chần chăn 4 mùa MOC 2 - kona
+url = https://kona.com.vn/products/bo-ga-chan-chan-4-mua-moc-2
 
 [www.everonvni.vn]
 match = 23.5%%
@@ -102,9 +102,9 @@ title = Bộ bọc Moder 03 (Ga chun chần)
 url = http://dreamland.vn/Bo-boc-Moder-03-(Ga-chun-chan)-i4155.html
 
 [www.everonqb.com]
-match = 67.7%%
-title = Bộ ga chun chần MC20208 180x200
-url = https://www.everonqb.com/bo-ga-chun-chan-mc20208-180x200.html
+match = 20.6%%
+title = Everon Quảng Bình Bộ chăn bốn mùa EPC21053 180x200
+url = https://www.everonqb.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [changagoidemsonghong.online]
 match = -38.2%%
