--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-19 02:48:31
+lastsearch = 2024-07-19 03:44:14
 
 [www.instagram.com]
-match = -176.9%%
-title = HArris CHan | My first dior saddle bagggg. 🎅🏽🧝🏻 ...
-url = https://www.instagram.com/_harris_chan_/p/Cz3dzHtyRjX/
+match = -169.2%%
+title = Embarking on a new journey, @Dior is set ...
+url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -17,8 +17,8 @@ title = Hoi Yee Ng - Christian Dior Couture
 url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
-match = -184.6%%
-title = Kimbee Chan Furthers Creative Pursuit With ...
+match = -238.5%%
+title = Kimbee Chan Furthers Creative Pursuit With Crochet ...
 url = https://wwd.com/fashion-news/fashion-scoops/kimbee-chan-knitwear-workshop-happy-yarn-1235938455/
 
 [vote.umich.edu]
