--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-19 00:44:17
+lastsearch = 2024-07-19 03:50:24
 
 [shopee.vn]
 match = -36.8%%
@@ -19,7 +19,7 @@ url = https://chieutrelanlan.com/chieu-tre-hat-vang-cao-cap-mat-mai-khong-vien-1
 [vongxepsaigon.vn]
 match = -168.4%%
 title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-120cm/
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-140cm/
 
 [chieutrelinhchi.com]
 match = -94.7%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -136.8%%
-title = Nhạc Thiếu Nhi Vui Nhộn Bé Đến Khu Vui Chơi Thiếu Nhi ...
-url = https://www.youtube.com/watch?v=1kfm-HBh_-g
+match = -78.9%%
+title = Những Bài Hát Thiếu Nhi Vui Nhộn Bé Yêu Thích
+url = https://www.youtube.com/watch?v=lxRkWryCSXU
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -64,7 +64,7 @@ url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-
 [tiki.vn]
 match = -136.8%%
 title = Đồ Chơi Trẻ Em Thông Minh HT SYS - Giúp Tư Duy, Sáng ...
-url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p275587203.html?spid=275587206
+url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p275587203.html?spid=275587203
 
 [khodem.vn]
 match = 31.6%%
