--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-19 03:31:14
+lastsearch = 2024-07-19 03:46:16
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=hteDrQdI8UA
 [books.google.com]
 match = -218.8%%
 title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHabBP6lzb&sig=ACfU3U3HcWMRq-e1WWiuQXVlVfus_b3c2Q&hl=en&sa=X&ved=2ahUKEwjxuLSut7GHAxVyEFkFHTaUCw8Q6AF6BAgeEAM
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHabBP7kzd&sig=ACfU3U34UxHEVHS2zof5_hB4vzuac19YgQ&hl=en&sa=X&ved=2ahUKEwjEkbrcurGHAxUDFVkFHeOzDhwQ6AF6BAggEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
