CI images update

--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-18 23:37:09
+lastsearch = 2024-07-19 04:13:11
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -22,9 +22,9 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.yellowpages.vn]
-match = 0.0%%
-title = danh sách Chiếu Nhựa
-url = https://www.yellowpages.vn/tgcls/10490435/Chiếu-Nhựa.html?j=0
+match = -3.6%%
+title = chiếu nhựa, chiếu cói, chiếu tre, chiếu trúc ở tại
+url = https://www.yellowpages.vn/class/490435/chiếu-nhựa,-chiếu-cói,-chiếu-tre,-chiếu-trúc-ở_.html
 
 [www.dienmayxanh.com]
 match = -35.7%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = -7.1%%
-title = Chiếu Nhựa Văn Phòng Bền Đẹp, Rẻ Như Tặng, Chất ...
-url = https://www.sendo.vn/chieu-nhua-van-phong.htm
+match = -25.0%%
+title = Chiếu nhựa gấp gọn size 4m, 3m chiếu ăn cơm hàng đẹp ...
+url = https://www.sendo.vn/chieu-nhua-gap-gon-size-4m-3m-chieu-an-com-hang-dep-nhieu-mau-109448350.html
 
 [mia.vn]
 match = -39.3%%
