CI images update

--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-19 02:14:11
+lastsearch = 2024-07-19 04:28:50
 
 [agasound.vn]
 match = 6.7%%
@@ -77,14 +77,14 @@ title = Khẩu, tuýp 1/4 đầu lắc léo hệ mét 12 cạnh hãng Genius
 url = http://geniustools.vn/khau-560/dau-lac-leo-1-4-he-met-12-canh-682
 
 [dochoimamnon123.com]
-match = -240.0%%
-title = D2 Cột Bóng rổ, Hầm chui, Vận động-Thể chất - Đồ chơi Bắc Hà
-url = https://dochoimamnon123.com/d2-cot-bong-ro-ham-chui-van-dong-the-chat
+match = -113.3%%
+title = Bộ vận động 12 chi tiết - Đồ chơi Bắc Hà
+url = https://dochoimamnon123.com/bo-van-dong-12-chi-tiet
 
 [m.facebook.com]
-match = -186.7%%
-title = Hội Những Người Ở Ký Túc Xá Khu B - KTX ĐHQG TP.HCM
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2388470364866762/
+match = -113.3%%
+title = 12 kinh lạc và các huyệt đạo trên cơ thể
+url = https://m.facebook.com/ngocanhspa85mtl/videos/12-kinh-lạc-và-các-huyệt-đạo-trên-cơ-thể/1493169384068508/
 
 [vietnamairport.vn]
 match = -93.3%%
