--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-19 02:45:34
+lastsearch = 2024-07-19 04:28:28
 
 [changagoidemsonghong.com]
-match = -50.0%%
-title = Bảng giá Chăn Ga Gối Đệm Sông Hồng chính hãng 2024 ...
-url = https://changagoidemsonghong.com/
+match = 4.2%%
+title = Chăn ga gối classic cotton mã C16-C38
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
 
 [www.diepxuan.com]
 match = -58.3%%
