--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-19 02:25:25
+lastsearch = 2024-07-19 04:27:13
 
 [tiki.vn]
 match = -138.9%%
@@ -17,9 +17,9 @@ title = Kích thước 160x200
 url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
-match = -183.3%%
-title = Everon EPM-22060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22060.html
+match = -188.9%%
+title = Everon ESB-22054 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22054.html
 
 [lavendervn.com]
 match = -22.2%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xám đậm
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga phủ Passion A114 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a114
+match = -61.1%%
+title = Bộ ga phủ Melody M214 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-melody-m214
 
 [aeoneshop.com]
 match = -105.6%%
@@ -82,9 +82,9 @@ title = 160x200
 url = https://www.mym.com.vn/kichthuoc/160x200/page/3
 
 [jysk.vn]
-match = -94.4%%
-title = Duvet cover set BIANA Sand DBL - JYSK.vn
-url = https://jysk.vn/en-US/duvet-cover-set-biana-sand-dbl
+match = -116.7%%
+title = Mattress 160x200 GOLD F40 DREAMZONE - JYSK.vn
+url = https://jysk.vn/en-US/mattress-180x200-gold-f40-dreamzone-1
 
 [edena.vn]
 match = -66.7%%
