--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-19 03:44:14
+lastsearch = 2024-07-19 04:31:00
 
 [www.instagram.com]
 match = -169.2%%
@@ -17,8 +17,8 @@ title = Hoi Yee Ng - Christian Dior Couture
 url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
-match = -238.5%%
-title = Kimbee Chan Furthers Creative Pursuit With Crochet ...
+match = -184.6%%
+title = Kimbee Chan Furthers Creative Pursuit With ...
 url = https://wwd.com/fashion-news/fashion-scoops/kimbee-chan-knitwear-workshop-happy-yarn-1235938455/
 
 [vote.umich.edu]
